--- a/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
@@ -9,15 +9,15 @@ SA1で炎を纏えるなら積極的にまとった方がいい。
 - 2LP, 2LP, SA2: 2500
 - 2LP, 2LP, 弱忍蜂, SA3: 3100
 
-## 2LP, 2LP, CDR 2LP
+## 2LP, 2LP, CR 2LP
 
-- {端} 2LP, 2LP, cDR 2LP, 4HK-HK, 中飛翔: 1816
-- 2LP, 2LP, cDR 2LP, 2MP, OD炎舞, SA1: 2123
-- {端} 2LP, 2LP, cDR 2LP, 4HK-HK, SA1: 2229
-- 2LP, 2LP, cDR 2LP, 飛燕連脚, ODムササビ, SA2: 2628
-- {端} 2LP, 2LP, cDR 2LP, 2MP, OD炎舞, SA2, 中飛翔: 2750
-- 2LP, 2LP, cDR 2LP, 2MP, 中炎舞, SA3: 3443
-- 2LP, 2LP, cDR 2LP, 2MP, OD炎舞, 弱忍蜂, SA3: 3715
+- {端} 2LP, 2LP, CR 2LP, 4HK-HK, 中飛翔: 1816
+- 2LP, 2LP, CR 2LP, 2MP, OD炎舞, SA1: 2123
+- {端} 2LP, 2LP, CR 2LP, 4HK-HK, SA1: 2229
+- 2LP, 2LP, CR 2LP, 飛燕連脚, ODムササビ, SA2: 2628
+- {端} 2LP, 2LP, CR 2LP, 2MP, OD炎舞, SA2, 中飛翔: 2750
+- 2LP, 2LP, CR 2LP, 2MP, 中炎舞, SA3: 3443
+- 2LP, 2LP, CR 2LP, 2MP, OD炎舞, 弱忍蜂, SA3: 3715
 
 ## 2LP(+2)
 
@@ -75,15 +75,15 @@ SA1で炎を纏えるなら積極的にまとった方がいい。
 - {立} HP(+4), OD扇-h, HP, 強炎舞, 弱忍蜂: 3000
 - {立} HP(+4), OD扇-h, HP, 強炎舞, 強飛翔: 3360
 - HP(+4), OD扇-h, HP, OD炎舞, 強飛翔: 3460
-- HP(+4), OD扇-h, HP, cDR 4HK, 2MP, 強炎舞, 強飛翔: 3614
+- HP(+4), OD扇-h, HP, CR 4HK, 2MP, 強炎舞, 強飛翔: 3614
 - {立端} HP(+4), OD扇-h, HP, 強炎舞, SA1: 3600
 - HP(+4), OD扇-h, HP, OD炎舞, SA1: 3940
-- HP(+4), OD扇-h, HP, cDR 4HK, 2MP, OD炎舞, SA1: 4078
+- HP(+4), OD扇-h, HP, CR 4HK, 2MP, OD炎舞, SA1: 4078
 - {立} HP(+4), OD扇-h, HP, 強炎舞, SA2: 4000
 - {端} HP(+4), OD扇-h, HP, OD炎舞, SA2, 中飛翔: 4860
 - {立} HP(+4), OD扇-h, HP, 強炎舞, 弱忍蜂, SA3: 5000
 - {立} HP(+4), OD扇-h, HP, 強炎舞, OD忍蜂, J.MP, 弱炎舞, SA3: 5380
-- HP(+4), OD扇-h, HP, cDR 4HK, 2MP, 強炎舞, 弱忍蜂, SA3
+- HP(+4), OD扇-h, HP, CR 4HK, 2MP, 強炎舞, 弱忍蜂, SA3
 
 ## 2HP(+2)
 
