--- a/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
@@ -55,9 +55,10 @@ SA1で炎を纏えるなら積極的にまとった方がいい。
 
 - {立} 2MP(+4), HP, 強炎舞, 弱忍蜂: 2520
 - {立} 2MP(+4), HP, 強炎舞, 強飛翔: 2760
-- 2MP(+4), HP, OD忍蜂, J.MP, 強飛翔: 3000 (AC3)
 - 2MP(+4), HP, OD炎舞, 強飛翔: 3190
+- 2MP(+4), HP, OD忍蜂, J.MP, ムササビ: 2900 (運びが大きい)
 - 2MP(+4), HP, CR HK, 2MP, CR 4HK, 2MP, 強炎舞, 強飛翔: 3502
+- 2MP(+4), HP, SA1: 3000
 - {端} 2MP(+4), 4HK-HK, SA1: 3480
 - 2MP(+4), HP, OD炎舞, SA1: 3600
 - {立} 2MP(+4), HP, 強炎舞, SA2: 3720
@@ -84,6 +85,8 @@ SA1で炎を纏えるなら積極的にまとった方がいい。
 - {立} HP(+4), OD扇-h, HP, 強炎舞, 弱忍蜂, SA3: 5000
 - {立} HP(+4), OD扇-h, HP, 強炎舞, OD忍蜂, J.MP, 弱炎舞, SA3: 5380
 - HP(+4), OD扇-h, HP, CR 4HK, 2MP, 強炎舞, 弱忍蜂, SA3
+- {焔1立} HP(+4), OD扇-h(焔), J.HK, HP, 強炎舞, 強飛翔: 3660
+- {焔2立} HP(+4), OD扇-h(焔), J.HK, HP, OD炎舞(焔), 強炎舞, 強飛翔: 4120
 
 ## 2HP(+2)
 
@@ -110,6 +113,7 @@ DR HPが無難だけど、近かったら直接HPでも届く。
 ## 4HK(+4)
 
 - 4HK(+4), 2MP, 強炎舞, 強飛翔: 2920
+- {焔1} 4HK(+4), 2MP, OD炎舞(焔), 強炎舞, 強飛翔: 3440
 - {端} 4HK(+4), 2MP, 強炎舞, SA1: 3240
 - 4HK(+4), 2MP, OD炎舞, SA1 (AC2): 3760
 - {端} 4HK(+4), 2MP, OD炎舞, SA2, 中飛翔: 4710
