--- a/games/Street-Fighter/Six/characters/Mai/舞の起き攻め.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の起き攻め.md
@@ -43,15 +43,21 @@
 
 - {中央} 弱扇: 昇竜対空も間に合う
 - {中央} DR HK: 打撃重ね、4F技と相打ちでSA2が入る
-- {端} ステップ, 前投げ: 柔道
+- {端} ステップ, 2MP
 - {端} ステップ, 前投げ: 柔道
 - {端} ステップ, 後歩き: シミー
 - {端} DR 4HK: +6
+- {端} OD扇
 
 ## 後投げ: 17
 
 - 後投げ, 強扇, (OD飛翔): その場受け身からジャンプに引っかかる、後ろ受け身からジャンプを落とせる
 - 後投げ, DR HP: 打撃重ね
+
+## 空投げ: 20
+
+後方受け身されるとラッシュしても投げが届かない。端でもダメ。
+DR 4HKを重ねる場合もガードされると投げ間合いの外になってしまう。
 
 ## 弱忍蜂: 27
 
