--- a/games/Street-Fighter/Six/characters/Gouki/豪鬼の対策.md
+++ b/games/Street-Fighter/Six/characters/Gouki/豪鬼の対策.md
@@ -14,3 +14,5 @@
 豪鬼は端と二段蹴りに気をつければ火力が出にくい。端は空中ヒットならいい。積極的にめくりを狙いたいところだけど、前歩きは危険。本当に少しずつ距離を詰める。
 
 中距離で波動拳をガードした後は不用意に前に歩くと二段蹴りが置いてあることもあるので注意。
+
+キャミィや豪鬼のように足元を狙って踏んでくる相手にはたまにバクステを置いて空振りに確反を入れるのはあり。
