--- a/games/Street-Fighter/Six/system/モダン操作の特徴.md
+++ b/games/Street-Fighter/Six/system/モダン操作の特徴.md
@@ -85,3 +85,5 @@ JP、ザンギ、ダルシム、春麗、などはいまいち。
 バーンアウトしたモダンはSAを構えているので、小技や投げで稼ぐのが大事。
 
 AC3からSA1にもいけるキャラはわりとアシコンが優秀と言える。
+
+モダンに炊いたことってマジで一回もないんだけど、一般的にはどこで炊くんだろ。
