--- a/shared/business/starting/ビジネスを始める.md
+++ b/shared/business/starting/ビジネスを始める.md
@@ -12,3 +12,5 @@
 今なら、YouTubeやTikTokで動画を上げたり、SNSに絵や書を上げたりするだけでもいい。なろう小説や同人誌なんかもある。ソフトウェア開発もApp StoreやPlay Storeのおかげで公開しやすくなった。
 
 同じような商品があっても、自分だけの特別な商品を新たに出すのはビジネスの楽しみではある。
+
+ビジネスの初期はお金にならないものが多い。
