--- a/shared/business/ビジネスを続ける.md
+++ b/shared/business/ビジネスを続ける.md
@@ -1,1 +1,7 @@
 お金を稼ぐのはビジネスの本質ではないけど、お金を稼がないとビジネスを続けられない。
+
+お金にならないビジネスを続けるためには、ビジネスの基盤となる社会貢献というか、社会に影響を与えることに楽しみを見出す精神が求められる。
+
+余裕があればお金にならないビジネスを並行していくつも抱えて育てられる。
+
+なんらかの手段で生活できないとビジネスを続けられない。
