--- a/shared/collaboration/organization/静かな退職.md
+++ b/shared/collaboration/organization/静かな退職.md
@@ -2,3 +2,5 @@ https://news.mynavi.jp/article/20240826-3010567/
 
 静かな退職の問題と管理職になりたくない問題は繋がっている。
 そもそも管理職にならないと給料が上がりにくいのと、管理職の扱いが良くないから管理職になりたくないのが合わさっている。
+
+仕事というのはそもそも定時で帰るのが当たり前なので、「静かな退職」よりも「声のでかい無能」に焦点を当てた方がいい。
