--- a/shared/voice/training/tips/ビブラートをかける.md
+++ b/shared/voice/training/tips/ビブラートをかける.md
@@ -114,3 +114,5 @@ https://youtube.com/watch?v=OiaaZBhYXr8&si=mZ_JMf_Nu_DebYaN
 
 不安定なビブラートは声帯が呼気を受け止めきれずに揺れてる。
 そうではなく、腹でビブラートを作る。
+
+ビブラートが小さくなりすぎるのはまだ呼吸のコントロールが不安定。ただ、自然にビブラートがかかるのは方向性としては悪くないはず。
