--- a/shared/voice/training/tips/声帯を鍛える.md
+++ b/shared/voice/training/tips/声帯を鍛える.md
@@ -60,3 +60,5 @@ https://youtu.be/53jjV6YaZvw?si=csTH61ZZZ6hcrujw
 地声の最高音の2つ下くらいで2音間を上下させると声帯を鍛えられる。
 
 声帯の伸び縮みを感じた状態で、ピッチを2度の間で上下させる。声帯のストレッチ。
+
+声帯を伸ばす筋肉を鍛えるなら、喉仏の下が筋肉痛にならないとおかしい。特に顎の下や舌が痛くなるのは変。
