--- a/shared/change/history/歴史書.md
+++ b/shared/change/history/歴史書.md
@@ -1,3 +1,5 @@
 歴史書が一つの視点でしか書かれてないっていうのは、よっぽど古くて残ってない時くらいしかない。
 
 ある時代について「どのくらい解明されているのか」「他にはどのような説があって、それぞれどれくらいの信頼性なのか」「偽書の情報が混ざっていないか」などを疑問に思わないといけない。
+
+1500年も経つと聖徳太子みたいに複数人の業績が一人にまとめられることがある。神にもよくあるパターン。
