--- a/shared/communication/media/language/languages/english/英語の発音.md
+++ b/shared/communication/media/language/languages/english/英語の発音.md
@@ -67,3 +67,5 @@ vとか腹式呼吸じゃないと上手く音が鳴らない。
 英語のnは上の歯全部に舌をべったりつけて息を止める。鼻に抜いて息を止めるのはngになるので注意。日本語の「ん」はngなので、日本語訛りでngになりがち。
 
 英語は文章のアクセントを伸ばす。Let me hear you sayのsayにアクセントがあるなら、「レミヒアユセーイ」になるし、もしmeにあるなら「レミーヒアユセイ」になる。
+
+英語は、日本語話者からするとiは「え」に近いし、aは「お」に近いし、oとuは「あ」に近いし、eは「い」に近い。なんもわからん。
