--- a/shared/voice/training/tips/喉を下げる.md
+++ b/shared/voice/training/tips/喉を下げる.md
@@ -166,3 +166,5 @@ https://youtube.com/watch?v=qXy2Sq8KmJA&si=0HkdEqvTfdu2eCTI
 そうではなく、首の下の方の筋肉で引っ張って下げる。
 
 舌で喉を押し下げてしまうとこもった声になる。
+
+声域が狭いと息を強くして無理やり出すために不安定になりやすい。声量も抑えにくい。喉も締まりやすい。
