--- a/shared/voice/training/tips/声帯を張る.md
+++ b/shared/voice/training/tips/声帯を張る.md
@@ -62,3 +62,5 @@ https://youtube.com/shorts/Zvpf7Lcfb2E?si=nc8lr40hK2s7h9x4
 バラードなんかは声帯ゆるゆるでゆったり歌った方がそれっぽい。
 
 髭ダンも声帯ゆるゆる。
+
+普段はできるだけ声帯のテンションが弱い状態で曲練習すると高い音が出にくいので、テンションを強くした際により高い音が出るようになる。ただ、テンションが強い状態の筋トレも必要。
