--- a/shared/music/vocal/training/tips/歌詞カードを作る.md
+++ b/shared/music/vocal/training/tips/歌詞カードを作る.md
@@ -1,28 +1,36 @@
+# 歌詞カードを作る
+
+## 主な手順
+
+1. テンポ（BPM）を記載する
+2. 歌詞を写す
+3. 全体の抑揚（サビとクレッシェンド、デクレッシェンド）を記載する
+4. リズム（拍子とアクセント）を記載する
+5. スタッカートにして短く切る位置を記載する
+6. ロングトーンにして長く伸ばす位置を記載する
+
+## その他、記載しておくと便利なこと
+
+- 歌詞の発音や読み仮名
+- ブレスの位置
+- フェイク（歌詞にない歌唱部分）
+- しゃくりやフォールなど特徴的なメロディ
+- 声色の変化や表現（しっとりと、とか、踊るように、とか）
+- 変調の位置
+
+## その他
+
 歌詞カードを作っても、カラオケでは歌詞を完全に覚えるか、画面に出る歌詞から歌詞カードの情報を思い出せるようにした方が便利。いちいち歌詞カードを取り出すのはめんどい。
 
 歌詞カードを作るときに何を書くか。
-
-- 歌詞の発音
-- 変調のタイミング
-- アクセント
-- スタッカートの位置
-- 声色の変化や表現（しっとりと、とか、踊るように、とか）
-- 抑揚（クレッシェンド、デクレッシェンド）
 
 裏声というよりは高音域を区別する？
 でもファルセットで抜きたいとこも示したいな。
 
 テクニックというよりは、表現をどうするかを書くのがいいかも。
 
-1. 歌詞を写す
-2. （フェイクを記載する）
-3. リズム（アクセント）を記載する
-4. スタッカートにして短く区切る位置を記載する
-5. ブレスの位置を記載する
-6. しゃくりやフォールなど特徴的なメロディを記載する
-
 まずはリズムが重要。
 
-英語の歌詞はまずアクセントがどこにあるか把握して、英語にマーキングするところから始めるといい。読み仮名をつけたりするのはその後。まずリズムがわからないと歌いづらいし、読み仮名をつけるにも聞き取りづらい。
+英語の歌詞は特に、まずアクセントがどこにあるか把握して、英語にマーキングするところから始めるといい。読み仮名をつけたりするのはその後。まずリズムがわからないと歌いづらいし、読み仮名をつけるにも聞き取りづらい。
 
 ネット上の歌詞はコピペできないことが多いけど、Safariのようなリーダーに読み込ませたり、CSSをいじって`user-select: none`を外したりするとコピペできる。
