--- a/shared/music/音楽の分類.md
+++ b/shared/music/音楽の分類.md
@@ -12,6 +12,7 @@
 - ヒップホップ: リズムマシンやサンプリングを駆使し、ラップを特徴とする音楽。
 - R&B: リズムアンドブルースの略で、ソウルミュージックやファンクなど、黒人音楽の影響が強い音楽。
 - エレクトロニック: 電子楽器やコンピュータを使って制作される音楽。
+- ラテン: 2ビート(8/6)と3ビート(8/6)
 - レゲエ
 - ダンス
 - ゴスペル: 福音音楽、プロテスタント系の宗教音楽
