--- a/games/Street-Fighter/Six/characters/Blanka/コンボ.md
+++ b/games/Street-Fighter/Six/characters/Blanka/コンボ.md
@@ -17,6 +17,10 @@
 - (端) HP, リフト, ODバロリ, SA1: /3160
 - HP, リフト, 強ロリ, SA3: 4760 (AC3)
 
+## HP, SA2
+
+- HP, SA2, HP, 中バチカ-3P, 中バチカ-3P
+
 ## HK
 
 - HK, LP, 中ロリ: 2060
