--- a/games/Street-Fighter/Six/characters/Blanka/ブランカの特徴.md
+++ b/games/Street-Fighter/Six/characters/Blanka/ブランカの特徴.md
@@ -64,6 +64,13 @@
 - 弱ロリ: 21
 - 中ロリ: 37.5
 
+## SA2
+
+SA2発動中は必殺技キャンセル可能な技からロリとバチカをタメなしで使える。
+また、空中でロリを出せる。ロリやバチカの硬直中でも。
+
+https://note.com/real_flax8743/n/na4cd26fbed87
+
 ## Reference
 
 - https://youtu.be/Eu3ocgvjXAE?si=vEHMO-ZPmfKFsofK
