--- a/shared/business/ビジネスを続ける.md
+++ b/shared/business/ビジネスを続ける.md
@@ -5,3 +5,5 @@
 余裕があればお金にならないビジネスを並行していくつも抱えて育てられる。
 
 なんらかの手段で生活できないとビジネスを続けられない。
+
+ビジネスを続けるにはファイナンスも必要だし、ファイナンスのためには生産性や価値、マネジメント、マーケティング、などを考える必要もある。
