--- a/shared/care/配慮.md
+++ b/shared/care/配慮.md
@@ -165,3 +165,6 @@ Careは単に失われないようにするだけで、Entertainmentだけでは
 誰かの配慮を必要としてない人は配慮するのが苦手。
 
 自分がどんな人が好きか、どんなことをされて嬉しかったか、をとりあえずの基準にして相手が好きなものを考える。
+
+疲れて余裕がなくなると、他人に配慮する余裕もなくなる。
+疲れても他人に優しくできるように、無意識で配慮できるようにする。
