--- a/shared/voice/training/tips/声帯を張る.md
+++ b/shared/voice/training/tips/声帯を張る.md
@@ -64,3 +64,7 @@ https://youtube.com/shorts/Zvpf7Lcfb2E?si=nc8lr40hK2s7h9x4
 髭ダンも声帯ゆるゆる。
 
 普段はできるだけ声帯のテンションが弱い状態で曲練習すると高い音が出にくいので、テンションを強くした際により高い音が出るようになる。ただ、テンションが強い状態の筋トレも必要。
+
+基本的には声帯に力を入れるのではなく、声帯を伸ばして声帯を張る。高く強く柔らかい声を出す。
+
+美空ひばりは男性でも歌えるくらいの音域で強く高く柔らかく歌わないといけないので良い練習になりそう。
