--- a/shared/voice/training/tips/声色を変える.md
+++ b/shared/voice/training/tips/声色を変える.md
@@ -14,6 +14,13 @@
 - 舌に力を入れる（詰まった声）
 - 声帯に力を入れる（硬い声）
 
+## 力強い声
+
+力強い声の基礎は強い息や肺活量と、安定した声。
+フラフラと揺れるようなビブラートよりは、真っ直ぐに声を出した方が力強く聞こえる。
+
+FIRE BIRDみたいに力強い曲は小声でも弱々しく歌いたくない。強い地声のまま小声にする。
+
 ## 明るい声
 
 軟口蓋を上げて口内の空間を広げると声が明るくなる。
@@ -107,3 +114,6 @@ https://youtube.com/watch?v=XWGCrPW6e-M&si=zPTuAuo2jKXU7pQ7
 地声でも声帯の後ろ側が少し開いてハスキー気味になると女性っぽい。
 
 柔らかくて高く軽い声は男には難しい。太く重くなりやすいし、柔らかくするために喉を下げて低くなりがち。
+
+ロボ子さんの声は少し鼻にかかってて、息が強く太く、息漏れが多い。あと喉が狭そう。
+真似しようとすると普通は高い声が出ない。
