--- a/shared/voice/training/tips/裏声を出す.md
+++ b/shared/voice/training/tips/裏声を出す.md
@@ -85,3 +85,11 @@ https://youtu.be/zbUnCDf60Mw?si=2RDqUvc5xWrnAmb7
 ファルセットはあくまでも表現として取り入れるべきで、まずは地声で全部歌えないといけない。
 
 宇多田ヒカルは雑音が少ない綺麗な裏声。
+
+声帯が硬いと裏声で抜きにくい。
+声帯を張っても、あくまでも声帯は柔らかいまま伸ばす。
+
+ファルセットは地声の延長で、鼻と口の間くらいに外向きの力を入れて声帯を開く。力の入れ具合で開き具合を調整する。
+
+unravelなんかは太い息で頻繁にブレスを入れながら歌う。スタッカートするところは弱くて太い息、レガートはしっかり支えつつも息は太く使う。
+息漏れが多くて、ホイッスルとはまた違う。
