--- a/games/Street-Fighter/Six/差し合い.md
+++ b/games/Street-Fighter/Six/差し合い.md
@@ -3,6 +3,9 @@
 差し合いで技が当たるのは相手が前に歩いたとき。
 つまり、差し合いで技を振るのは、相手が前に出て、自分が下がっている時であるべき。
 
+差し込みは、差し返しに勝つというより、後退に勝つ。
+下段技以外はキャンセルから有利を取る以外、基本的には置きでいい。Punkの小パン確認みたいにカウンター確認してコンボにするので、相手が動いていたら当たる距離でいい。できれば当てた方が差し返しがなくなる。
+
 ## その他
 
 差し合いとは、攻めに入るまでの過程だ。
