--- a/shared/government/democracy/代議士.md
+++ b/shared/government/democracy/代議士.md
@@ -7,3 +7,5 @@
 
 国家を運営するために求められる能力の水準が高いので、政治家や官僚のほとんどはその水準に届かない無能だ。
 たくさんのウンコの中でマシなウンコを探すのが選挙。
+
+票に格差があるので、投票もそもそも賄賂だ。年寄り向けの政策を取るのは年寄りから賄賂をもらっているのと同じ。賄賂にいちいち食ってかかるのは合理的ではない。
