--- a/shared/music/vocal/training/tips/フレーズの終わりにこだわる.md
+++ b/shared/music/vocal/training/tips/フレーズの終わりにこだわる.md
@@ -5,3 +5,15 @@
 
 息に余裕ができたら、フレーズの終わりの処理にも気を使う。
 息が足りないととにかく急いで切って吸うしかない。
+
+フレーズの終わりをどう処理するか。
+
+すぐに切る、
+フェードアウトする、
+
+しゃくって切る、
+一瞬裏声にして切る、
+フォールして切る、
+抜いて切る、
+力を入れて切る、
+フェードアウトする、
