--- a/shared/voice/training/tips/喉を下げる.md
+++ b/shared/voice/training/tips/喉を下げる.md
@@ -3,6 +3,11 @@
 甲状軟骨を前に倒す。
 甲状軟骨の出っ張りが喉仏なので、前に倒すことで喉仏の位置が下がる。これを喉を下げるという。
 
+## 喉を下げる目的
+
+- 喉の空間を広げる
+- 声帯を伸ばす
+
 ## 喉を下げる方法
 
 - 首の筋肉で下に引っ張る
@@ -168,3 +173,5 @@ https://youtube.com/watch?v=qXy2Sq8KmJA&si=0HkdEqvTfdu2eCTI
 舌で喉を押し下げてしまうとこもった声になる。
 
 声域が狭いと息を強くして無理やり出すために不安定になりやすい。声量も抑えにくい。喉も締まりやすい。
+
+喉を下げるというよりは、顎と喉を離すような感覚かも。喉をとにかく下げようとすると顎や舌で下げようとしがち。
