--- a/shared/voice/training/tips/声帯を張る.md
+++ b/shared/voice/training/tips/声帯を張る.md
@@ -68,3 +68,8 @@ https://youtube.com/shorts/Zvpf7Lcfb2E?si=nc8lr40hK2s7h9x4
 基本的には声帯に力を入れるのではなく、声帯を伸ばして声帯を張る。高く強く柔らかい声を出す。
 
 美空ひばりは男性でも歌えるくらいの音域で強く高く柔らかく歌わないといけないので良い練習になりそう。
+
+玉置浩二のメロディーは強い息の地声で声帯を張らずに歌ってると思う。
+極端に優しい声だけど、声は小さくなるからマイクに齧り付かないといけない。
+
+声帯に力を入れて動きを悪くするよりは、しっかり伸ばすことで緩みをなくした方がいい。
