--- a/shared/voice/training/tips/声色を変える.md
+++ b/shared/voice/training/tips/声色を変える.md
@@ -14,12 +14,21 @@
 - 舌に力を入れる（詰まった声）
 - 声帯に力を入れる（硬い声）
 
+## 硬い声
+
+声帯に力を入れる。
+声帯の動きは悪くなる。
+
 ## 力強い声
 
 力強い声の基礎は強い息や肺活量と、安定した声。
 フラフラと揺れるようなビブラートよりは、真っ直ぐに声を出した方が力強く聞こえる。
 
 FIRE BIRDみたいに力強い曲は小声でも弱々しく歌いたくない。強い地声のまま小声にする。
+
+## 弱々しい声
+
+不安定な声の揺れは弱々しく聞こえる。
 
 ## 明るい声
 
