--- a/shared/voice/声のテンション.md
+++ b/shared/voice/声のテンション.md
@@ -12,3 +12,5 @@
 スケールが長くてテンションが強い、より引っ張って弦を張っているほうが大きな音が出る。テンションが強いほど体には負担がかかる。
 大きな声を出したかったら、強い体が必要。
 https://youtu.be/MfYo2SQlaUk?si=mE-o_WCY1JFrisP0
+
+声帯のテンションというのは、声帯の伸びというよりも緩みがないこと。
