--- a/shared/voice/tuning/声のウォームアップ.md
+++ b/shared/voice/tuning/声のウォームアップ.md
@@ -101,3 +101,8 @@ https://youtu.be/c2Kftj5KKF4?si=vPMiab_Cw0-Vjqzc
 歌い始める前に声帯を起こす。
 
 裏声やハミングでも声帯は伸ばせるので、ウォーミングアップとしてはハミングが簡単。
+
+妊婦さんの「ひっひっふー」も呼吸のウォームアップになる。
+
+声というより喉かも。
+呼吸器系のウォームアップは別でまとめてもいいかも。
