--- a/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
@@ -55,6 +55,7 @@ SA1で炎を纏えるなら積極的にまとった方がいい。
 
 - {立} 2MP(+4), HP, 強炎舞, 弱忍蜂: 2520
 - {立} 2MP(+4), HP, 強炎舞, 強飛翔: 2760
+- {端} 2MP(+4), 4HK-HK, 中飛翔: 2910
 - 2MP(+4), HP, OD炎舞, 強飛翔: 3190
 - 2MP(+4), HP, OD忍蜂, J.MP, ムササビ: 2900 (運びが大きい)
 - 2MP(+4), HP, CR HK, 2MP, CR 4HK, 2MP, 強炎舞, 強飛翔: 3502
@@ -130,6 +131,12 @@ DR HPが無難だけど、近かったら直接HPでも届く。
 - 飛燕連脚, ムササビ: 1570
 - 飛燕連脚, ODムササビ, 強飛翔: 2290
 - 飛燕連脚, ODムササビ, SA2: 3090
+
+## 扇(空)
+
+相手が扇を踏んだ場合のコンボ。
+
+- 扇(空)
 
 ## DI(pc)
 
