--- a/games/Street-Fighter/Six/characters/Mai/舞の練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の練習メニュー.md
@@ -1,4 +1,4 @@
-## 弱攻撃からの攻め
+## 弱攻撃のヒット確認
 
 （ダミー設定 > ガード: ランダム）
 （ダミー設定 > 起き上がり: 後方受け身）
@@ -13,7 +13,18 @@
 モダンならAC1でも可。ヒット確認が要らないので簡単。
 ただ、暴れでも使うので、2LPからもコンボにできた方がいい。
 
-## 柔道 1
+## 中攻撃のヒット確認
+
+（ダミー設定 > ガード: ランダム）
+（ダミー設定 > 起き上がり: 後方受け身）
+（反撃設定 > ガードリバーサル: 通常投げ）
+（反撃設定 > ガードリバーサル: 何もしない）
+
+- 2MP, 2LP, 弱忍蜂, ステップ; 2MP, ...
+- 2MP(g), {投げ}, 2MP(pc), HP, 強炎舞, 強忍蜂, ステップ; 2MP, ...
+- 2MP(g), ガード
+
+## 柔道
 
 （反撃設定 > ダウンリバーサル: 4F技）
 （反撃設定 > ダウンリバーサル: 前方ジャンプ）
@@ -21,18 +32,6 @@
 - {端} 前投げ, ステップ, 前投げ, ...
 - {端} 前投げ, ステップ, 前投げ, {前方ジャンプ}, 弱飛翔
 - {端} 前投げ, ステップ, 2LP, 2LP, 弱忍蜂, ...
-
-## 柔道 2
-
-（反撃設定 > ダウンリバーサル: 通常投げ 4Fディレイ）
-（反撃設定 > ダウンリバーサル: 2MK 2Fディレイ）
-（反撃設定 > ダウンリバーサル: 前方ジャンプ）
-（反撃設定 > ダウンリバーサル: 何もしない）
-
-- {端} 前投げ, ステップ, 後歩き, {通常投げ}, 2MP(pc), HP, 強炎舞, 弱忍蜂, ...: シミー
-- {端} 前投げ, ステップ, 後歩き, {2MK}, ガード, 2MP(pc),
-- {端} 前投げ, ステップ, 後歩き, {前方ジャンプ}, 後J.LK
-- {端} 前投げ, ステップ, 後歩き, {何もしない}, 前歩き, 前投げ
 
 ## 対空
 
@@ -57,7 +56,14 @@
 
 - DI(壁), 4HK-HK, 中飛翔/SA1
 
-MならSPボタンで出せる弱飛翔でもいい。
+MならまずはSPボタンで出せる弱飛翔でもいい。
+
+## 差し合いの中のPCコンボ
+
+（簡単練習設定: 差し返しの練習）
+
+- 4HK(pc), DR HP, 強炎舞, 弱忍蜂, SA3, DR
+- 4HK(pc), DR HP, 強炎舞, 弱忍蜂, ステップ, 2LP/前投げ
 
 ## ラッシュからの攻め
 
@@ -73,12 +79,24 @@ MならSPボタンで出せる弱飛翔でもいい。
 
 - DR 4HK(g), 後歩き, 2MP(pc), HP, 強炎舞, ...
 
-## 差し合いの中のPCコンボ
+## 中足ラッシュからの攻め
 
-（簡単練習設定: 差し返しの練習）
+（ガード: ランダム）
 
-- 4HK(pc), DR HP, 強炎舞, 弱忍蜂, SA3, DR
-- 4HK(pc), DR HP, 強炎舞, 弱忍蜂, ステップ, 2LP/前投げ
+- 2MK, CR 4HK, 2MP, 強炎舞, ...: 相打ちでも同じ
+- 2MK, CR 4HK(g), 投げ
+
+## 高度な柔道
+
+（反撃設定 > ダウンリバーサル: 通常投げ 4Fディレイ）
+（反撃設定 > ダウンリバーサル: 2MK 2Fディレイ）
+（反撃設定 > ダウンリバーサル: 前方ジャンプ）
+（反撃設定 > ダウンリバーサル: 何もしない）
+
+- {端} 前投げ, ステップ, 後歩き, {通常投げ}, 2MP(pc), HP, 強炎舞, 弱忍蜂, ...: シミー
+- {端} 前投げ, ステップ, 後歩き, {2MK}, ガード, 2MP(pc),
+- {端} 前投げ, ステップ, 後歩き, {前方ジャンプ}, 後J.LK
+- {端} 前投げ, ステップ, 後歩き, {何もしない}, 前歩き, 前投げ
 
 ## ムササビからの起き攻め
 
