--- a/games/Street-Fighter/Six/characters/Guile/ガイルの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの立ち回り.md
@@ -53,6 +53,8 @@ ODブレイドは普通のソニックがODクロスになる。
 
 ガイルは中距離で気軽に弾を撃つキャラではないが、遠距離で遅い弾を撃って、一歩前に出て、中距離から硬直に弾を当てて押すのも強い動き。
 
+時間を稼ぎたい時は弱ソニックでゆっくり時間を使う。
+
 ## 攻め
 
 バーンアウトすると守りがきついので、ゲージが少なくなったら無理に攻めない方がいい。
