--- a/games/Street-Fighter/Six/characters/Guile/ガイルのコンボの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルのコンボの選択肢.md
@@ -65,6 +65,10 @@
 - 2MP(+4), MP-4HP, 強SA1, ODサマー: 3720
 - {C} 2MP(+4), HP, cDR HK, 2MP, 強サマー, SA3: 5112
 
+## 2MP, CR 2MP
+
+- 2MP, CR 2MP, MP, 2MP, 強サマー: 2586
+
 ## {C} 6MP(+2)
 
 - {C} 6MP(+2), 2LP, 強サマー: 2220
