--- a/games/Street-Fighter/Six/characters/Guile/ガイルの攻め継続.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの攻め継続.md
@@ -5,3 +5,9 @@
 ## LK, cDR 2LP
 
 ガードされても+2になる。
+
+## 2MP, CR 2MP
+
+- 2MP, CR 2MP, MP, 2MP, 強サマー
+- 2MP, CR 2MP(g), 前投げ
+- 2MP, CR 2MP(g), 後歩き: シミー
