--- a/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
@@ -16,6 +16,7 @@ SA1で炎を纏えるなら積極的にまとった方がいい。
 - {端} 2LP, 2LP, CR 2LP, 4HK-HK, SA1: 2229
 - 2LP, 2LP, CR 2LP, 飛燕連脚, ODムササビ, SA2: 2628
 - {端} 2LP, 2LP, CR 2LP, 2MP, OD炎舞, SA2, 中飛翔: 2750
+- {端} 2LP, 2LP, CR 2LP, 2MP, OD炎舞, SA2, OD飛翔: 2835
 - 2LP, 2LP, CR 2LP, 2MP, 中炎舞, SA3: 3443
 - 2LP, 2LP, CR 2LP, 2MP, OD炎舞, 弱忍蜂, SA3: 3715
 
@@ -72,6 +73,15 @@ SA1で炎を纏えるなら積極的にまとった方がいい。
 
 - MK(+4), 2HK: 1740
 
+## HP
+
+- HP, OD炎舞: 3400
+- HP, OD炎舞, SA2: 4040
+- {端} HP, OD炎舞, SA2, OD飛翔: 5000
+- HP, OD炎舞, SA3: 5000
+
+SAを使う場合、HP, OD炎舞から直接入ると一番効率がいい。
+
 ## HP(+4)
 
 - {立} HP(+4), OD扇-h, HP, 強炎舞, 弱忍蜂: 3000
@@ -81,11 +91,11 @@ SA1で炎を纏えるなら積極的にまとった方がいい。
 - {立端} HP(+4), OD扇-h, HP, 強炎舞, SA1: 3600
 - HP(+4), OD扇-h, HP, OD炎舞, SA1: 3940
 - HP(+4), OD扇-h, HP, CR 4HK, 2MP, OD炎舞, SA1: 4078
-- {立} HP(+4), OD扇-h, HP, 強炎舞, SA2: 4000
-- {端} HP(+4), OD扇-h, HP, OD炎舞, SA2, 中飛翔: 4860
-- {立} HP(+4), OD扇-h, HP, 強炎舞, 弱忍蜂, SA3: 5000
+  <!-- - {立} HP(+4), OD扇-h, HP, 強炎舞, SA2: 4000 -->
+  <!-- - {端} HP(+4), OD扇-h, HP, OD炎舞, SA2, 中飛翔: 4860 -->
+  <!-- - {立} HP(+4), OD扇-h, HP, 強炎舞, 弱忍蜂, SA3: 5000 -->
+- {端} HP(+4), OD扇-h, HP, OD炎舞, SA2, OD飛翔: 5060
 - {立} HP(+4), OD扇-h, HP, 強炎舞, OD忍蜂, J.MP, 弱炎舞, SA3: 5380
-- HP(+4), OD扇-h, HP, CR 4HK, 2MP, 強炎舞, 弱忍蜂, SA3
 - {焔1立} HP(+4), OD扇-h(焔), J.HK, HP, 強炎舞, 強飛翔: 3660
 - {焔2立} HP(+4), OD扇-h(焔), J.HK, HP, OD炎舞(焔), 強炎舞, 強飛翔: 4120
 
@@ -118,6 +128,7 @@ DR HPが無難だけど、近かったら直接HPでも届く。
 - {端} 4HK(+4), 2MP, 強炎舞, SA1: 3240
 - 4HK(+4), 2MP, OD炎舞, SA1 (AC2): 3760
 - {端} 4HK(+4), 2MP, OD炎舞, SA2, 中飛翔: 4710
+- {端} 4HK(+4), 2MP, OD炎舞, SA2, OD飛翔: 4960
 
 ## J.MP
 
@@ -180,3 +191,5 @@ DR HPが無難だけど、近かったら直接HPでも届く。
 モダンはOD炎舞, 弱忍蜂よりもOD忍蜂, J.MP, ムササビの方が高くなりやすい。
 
 LP, 弱炎舞が繋がるけどダメージも弱忍蜂と変わらないので使わない。
+
+とりあえずOD炎舞に繋いでおけばSA3種が中央でも入るので、まずはキャンセルラッシュよりもOD炎舞に繋ぐことを考える。
