--- a/games/Street-Fighter/Six/characters/Mai/舞の操作.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の操作.md
@@ -7,6 +7,9 @@
 立ち回りやコンボでMPがないのは不便だが、致命的ではない。
 忍蜂も火力は落ちるものの弱忍蜂で代用できる。
 
+モダンはMPがないので、中足が届かないくらいの距離でいきなりHKを振らないといけない。この距離では下がった方がいい。MKを振ってもリターンがないし。
+逆に、M舞を相手にする場合はこの中足のギリギリ外くらいの間合いを意識するといいかも。
+
 ### モダンにない技
 
 - LP (ACのみ)
