--- a/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
@@ -26,8 +26,13 @@ SA1で炎を纏えるなら積極的にまとった方がいい。
 - {C} 2LP(+2), 2MP, 強忍蜂: 1480
 - {立} 2LP(+2), 2MP, 強炎舞, 強飛翔: 2000
 - 2LP(+2), 2MP, OD炎舞, 強飛翔: 2200
-- 2LP(+2), 2MP, OD炎舞, SA1: 2680
 - 2LP(+2), 2MP, CR 4HK, 2MP, 強炎舞, 強飛翔: 2194
+- 2LP(+2), 2MP, OD炎舞, SA1: 2680
+- 2LP(+2), 2MP, OD炎舞, SA2: 3160
+- {端} 2LP(+2), 2MP, OD炎舞, SA2, 中飛翔: 3600
+- {端} 2LP(+2), 2MP, OD炎舞, SA2, OD飛翔: 3800
+- 2LP(+2), 2MP, OD炎舞, 弱忍蜂, SA3: 3960
+- 2LP(+2), 2MP, CR 4HK, 2MP, CR HK, 2MP, 強炎舞, 弱忍蜂, SA3: 4404
 
 ## 2LK
 
