--- a/games/Street-Fighter/Six/characters/Mai/舞の攻め.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の攻め.md
@@ -4,6 +4,8 @@
 
 投げ間合いなら基本的には2回、密着なら3回まで。
 
+カウンター確認できるなら2MPも繋がるけど、猶予が短い。動いた確認できるといい。
+
 ## 2LP, OD扇: 1-5
 
 - 2LP, OD扇
@@ -37,6 +39,7 @@
 
 ヒット確認で+5から2LPが繋がる。
 ガードされると-3だが投げ間合いの外。
+カウンターすると2MPが入るので一気にダメージが伸びる。カウンター確認もできると良い。
 
 ## 4HK: 4-9
 
