--- a/games/Street-Fighter/Six/characters/Guile/ガイルのコンボの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルのコンボの選択肢.md
@@ -1,5 +1,10 @@
 ## 2LP
 
+- 2LP, 2LP, 強サマー: 1520
+- 2LP, 2LP, 強サマー, SA3: 3520
+
+## 2LP, 2LP, cDR 2LP
+
 - 2LP, cDR 2LP, MP-4HP, 強サマー: 1752
 - 2LP, cDR 2LP, MP-4HP, 強SA1, ODサマー: 2362
 - 2LP, cDR 2LP, MP, 2MP, 強サマー, SA3: 3368
@@ -15,6 +20,7 @@
 
 ## 2LK
 
+- 2LK, 2LP, 強サマー: 1420
 - 2LK, 2LP, LK, 強サマー: 1490(AC1)
 - 2LK, 2LP, LK, cDR LP, MP-4HP, ODソニック, SA3: 3384(AC3)
 
@@ -68,6 +74,8 @@
 ## 2MP, CR 2MP
 
 - 2MP, CR 2MP, MP, 2MP, 強サマー: 2586
+- 2MP, CR 2MP, MP-4HP, 強SA1, ODサマー: 3336
+- 2MP, CR 2MP, MP, 2MP, 強サマー, SA3: 4586
 
 ## {C} 6MP(+2)
 
@@ -113,9 +121,12 @@
 - {C} HP(pc), HP, cDR HK, 2MP, 強サマー: 3166
 - {C} HP(pc), HK/4HP, 強SA1, ODサマー: 3760
 - {C中央} HP(pc), HP, cDR 6MK, MP, 2MP, 弱ソニ, HK, 弱SA1: 3775
+- {C端} HP(pc), HP, cDR 6MK, MP, 2MP, 弱ソニ, 4HP, 弱ソニ, HK, 強SA1, ODサマー: 3968
 - {C} HP(pc), HK/4HP, SA3: 4520
 - {C} HP(pc), 2MP, 強サマー, SA3: 4540
 - {C} HP(pc), HP, cDR HK, 2MP, 強サマー, SA3: 5166
+- {C中央} HP(pc), HP, cDR 6MK, MP, 2MP, 弱ソニ, HK, SA3: 5175
+- {C端} HP(pc), HP, cDR 6MK, MP, 2MP, 弱ソニ, 4HP, 弱ソニック, HK, SA3: 5324
 
 ## 4HP
 
