--- a/games/Street-Fighter/Six/characters/Guile/ガイルの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの練習メニュー.md
@@ -1,4 +1,15 @@
-## 確反
+## 飛び道具
+
+- 弱/強ソニック
+
+最速で回せるようにする。
+
+## {C} 確反
+
+- HP(pc), 3HK, 強サマー
+- HP(pc), HP, CR HK, 2MP, 強サマー, SA3
+
+## {M} 確反
 
 - 6HP(pc), MP-4HP, 強サマー
 - 6HP(pc), MP-4HP, ODソニック, SA3
@@ -10,17 +21,16 @@
 
 ## 対空
 
+- 弱サマー
 - 2HP
+- MK
 
-## 飛び道具
+## ジャンプ弱攻撃からのコンボ
 
-- 弱/強ソニック
+（ダミー設定 > ガード: ランダム）
 
-最速で回せるようにする。
-
-## 対空 2
-
-- 中サマー
+- J.LK, MP, 2MP, 強サマー
+- J.LK(g), MP, ガード
 
 ## ジャンプ攻撃からのコンボ
 
