--- a/shared/business/ビジネス.md
+++ b/shared/business/ビジネス.md
@@ -761,3 +761,5 @@ https://journals.plos.org/complexsystems/article?id=10.1371/journal.pcsy.0000001
 ビジネスではモテる人が強い。Popularになれる人。
 有名になること、人気になること、愛されること。
 社会や他人に良い影響を与えること、貢献することで愛される。
+
+他人のためのビジネスと自分のためのビジネスがある。
