--- a/shared/leisure/examples/karaoke/カラオケの採点.md
+++ b/shared/leisure/examples/karaoke/カラオケの採点.md
@@ -36,3 +36,6 @@ DAM だと以下の 5 項目が基本項目。
 カラオケの採点では機械で採点しやすい部分、特にリズム、メロディ、ボリュームの3点の影響が大きい。まずは音程を合わせること。
 
 あまり歌唱技術そのものの上達は反映されない。ビブラートくらい。
+
+カラオケの採点はあくまでも参考程度にする。
+なんなら音が合ってても声がデカくて音が取れてないとか、マイクが切れて音が取れてないとかもある。
