--- a/shared/music/音楽.md
+++ b/shared/music/音楽.md
@@ -36,3 +36,5 @@ https://youtube.com/watch?v=KnTSHJEhbcM&si=q-w-PxBGzsnXEWDB
 一つでもリズム的におかしなことがあれば全体が崩れてしまう。」
 （バリー・ハリス）
 https://youtu.be/69b0XDX6Mi0?si=SWd-QIton1VpDiHd
+
+音楽ってリズムしか要らないのかもしれない。メロディやハーモニーは音の要素であって音楽の要素ではないのかも。
