--- a/shared/voice/training/tips/声を安定させる.md
+++ b/shared/voice/training/tips/声を安定させる.md
@@ -74,3 +74,7 @@ https://youtu.be/dpm_YauvTDs?si=I8dM0qUOKjpOts8d
 
 自信を持って歌わないと声量が不安定になりやすい。
 歌詞やメロディを多少間違えても、自信を持って安定した声量で歌う。
+
+sの発音を長く出したまま、息と声の配分を100:0から0:100、0:100から100:0までゆっくり遷移できるようにする。途中でsが切れたり 逆に大きくなったりするのはおかしい。
+
+まずは出しやすい音で安定したロングトーンを出せるようにするのと、2度の自然なピッチコントロールから。
