--- a/shared/voice/training/tips/発音を変える.md
+++ b/shared/voice/training/tips/発音を変える.md
@@ -72,3 +72,6 @@ iと同じように舌を前に出すことで代用する。
 shは息漏れしたり溜めを作ったりしてsよりも息を多めに通す。息の圧が強くて息の音がうるさくなりすぎるならsにしたほうがいい。
 
 日本語の「い」は喉が狭くなりやすいので、「i」で出す。
+
+正しい発音がわかってないのに発音の練習をしても意味がない。
+まずは正しい発音を知って、一音ずつ練習するところから。早口言葉のような文章で練習するのはもっと慣れてから。
