--- a/games/Street-Fighter/Six/characters/Guile/ガイルの確反.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの確反.md
@@ -1,5 +1,7 @@
 # 確反
 
+クラシックならまずはHPから練習する。
+
 ## 7F以上
 
 CガイルならHP始動が基本。4HPよりもダメージが高くて、発生7Fで、長め。
@@ -7,10 +9,12 @@ HP(pc), 3HK, 強サマソならHPの最大射程でも入るし、2860減る。S
 
 ## 6F
 
-Dリバには2MP(+4), HP, cDR HKのルート。
+Dリバには2MP(+4), HP, cDR HKのルートか、2MP, 2MPのルート。
 
 ## 4F
 
+2LP, 2MPからサマーか、ラッシュする。
+
 ## インパクト返し
 
-- DI(pc),
+- DI(pc), 3HK, 強サマー
