--- a/games/Street-Fighter/Six/characters/Guile/ガイルの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの立ち回り.md
@@ -55,6 +55,13 @@ ODブレイドは普通のソニックがODクロスになる。
 
 時間を稼ぎたい時は弱ソニックでゆっくり時間を使う。
 
+遅い弾は追いかける。
+
+ブレイドは遠距離で使う。
+中距離のリスクの高いブレイドは減らす。
+
+ODソニックやODクロスはリターンが低いので使わない。
+
 ## 攻め
 
 バーンアウトすると守りがきついので、ゲージが少なくなったら無理に攻めない方がいい。
@@ -74,6 +81,12 @@ DR 2MKやDR HKから2MPに繋ぐ。
 相手が何もしなかったらソニックを撃ってクロスに派生してもいいし。
 
 パリィしてくる相手には、裏拳をとりあえずガードさせて攻め継続するのもあり。
+
+## 攻めの入り
+
+ジャンプ攻撃をガードさせた後はMPで溜めつつヒット確認。
+
+2MP, CR 2MPから密着の読み合い。
 
 ## 守り
 
