--- a/shared/training/練習.md
+++ b/shared/training/練習.md
@@ -313,3 +313,5 @@ experienceとpractice自体はもっと一般的な文脈でいいかも。
 常識や偏見、呪縛になりそうなものを全て捨てて、どんな形にもなれるようにする。
 
 思考していると追いつけない状況がわりとある。反射でできるようにしないといけない。それに反射でできることが増えれば思考する余裕もできる。
+
+訓練しないと上手くならないけど、試練しないと強くならない。
