--- a/shared/voice/training/声を制御する要素.md
+++ b/shared/voice/training/声を制御する要素.md
@@ -1,28 +1,46 @@
 ## 制御される要素
 
-- 声量、声と息のバランス
-- 声色（裏声、鼻声など）
-- 音程
+- 声量
+- 声色
+  - 強さ
+  - 明るさ
+  - 優しさ
+  - など
+- 声の高さ（音程、ピッチ）
 - 声の響き、硬さ
 - 声の揺れ（ビブラート）
-- 雑音（エッジボイス、シャウト、など）
+- 声の安定性
+- 雑音
+  - 鼻声
+  - エッジボイス
+  - シャウト
+  - など
 
 ## 声を制御する要素
 
+- 音の鳴る位置
 - 息の圧・強さ（プレッシャー）
 - 息の量・太さ
-- 声帯の位置
+- 息の安定性
+- 声帯の高さ（ポジション）
 - 声帯の張り（テンション）
 - 声帯の硬さ
-- 声帯の長さ
+- 声帯の伸び・長さ
+- 声帯の開き（息漏れの量）
+- 声帯の安定性
+- 軟口蓋の開き
+- 軟口蓋の高さ
 - 仮声帯の鳴り
-- 軟口蓋の位置（開閉、高さ）
-- 口の形
-- 舌の形や位置
-- 喉の広さ
+- 顎の位置
+- 唇の形
+- 舌の形
+- 舌の位置
+- 気道（喉、鼻）の広さ
 
-逆に、制御できない要素
+## 制御できない要素
 
+- 喉の長さ
+- 声帯の大きさ
 - 肺や胸郭の大きさ
 - 鼻や顎などの骨格
 
