--- a/shared/voice/training/声を制御する要素.md
+++ b/shared/voice/training/声を制御する要素.md
@@ -48,3 +48,18 @@
 
 声の重さは、声帯の張りで決まる。張りが強いほど重い声。
 ただ、張りを強くするには体を鍛えないといけない。自分の扱えるテンションを超えると裏返ったり不安定になったりする。
+
+## 声を出すのに関連する体の部位
+
+- 喉・気道
+- 声帯
+- 唇
+- 口
+- 舌
+- 鼻
+- 肺・胸郭
+- 軟口蓋
+- 仮声帯
+- 横隔膜
+- 腹筋
+- 首の筋肉
