--- a/shared/voice/training/声を出すための呼吸.md
+++ b/shared/voice/training/声を出すための呼吸.md
@@ -1,3 +1,12 @@
+腹から送られてくる以上の息をつかってはいけない。
+
+呼吸と声帯は一緒に鍛えないといけない。
+声帯だけを鍛えても呼吸が弱いと使いきれないし、呼吸だけを鍛えても声帯が弱いと受け止めきれない。
+
+自分が腹だけでどれくらい息の圧を維持できるかは把握しておく。単に最低音のロングトーンをストップウォッチで測るだけ。喉で息をコントロールするのではなく、腹で圧がかからなくなったらそこで止めるのが大事。
+
+結構たくさん息を送らないと声が出ないのって声帯が高いせい？それかそもそも閉まってないのかも。
+
 息がコントロールできないと声もコントロールできない。
 
 声を出すのにあまり息の量は必要ない。
@@ -38,3 +47,15 @@
 息の圧が弱いのに息が漏れないのは、声帯に力を入れて無理やりくっつけている。
 
 強く声を出すFAKE TYPEみたいな曲は息を強く吐くというよりは、あらかじめ息の圧を高めておいて、必要なところで解放するだけ。息の量は一定。
+
+声帯が震えないとどれだけ息を増やしても声は大きくならない。
+
+特にハスキーボイスでしっかり声を出すには、声帯を開いて息を漏らしながら声帯を揺らさないといけないので難しい。
+
+強い息で弱い声を出す時は捨てる息の量を増やす。
+
+音の高さ、強さを変えても息は一定。強い息のまま高い音から低い音まで、強い音から弱い音まで出せるようにする。
+
+呼気圧をかけたまま小さな声ってどうしたらいい？
+
+息と声の割合が100:0か0:100しかないと、いきなり大きな声から出すことしか出せない。同じ息の量でで小さな声から大きな声まで滑らかに変えられるようにする必要がある。呼気圧をかけたまま小さな声を出して、滑らかに声帯を閉じていけるように練習する。まずは3段階、5段階、と段階を細かく分けられるようにする。
