--- a/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
@@ -2,6 +2,8 @@
 
 SA1で炎を纏えるなら積極的にまとった方がいい。
 
+リーサルは基本的にOD炎舞でいい。
+
 ## 2LP
 
 - 2LP, 2LP, 弱忍蜂: 1100
@@ -80,12 +82,14 @@ SA1で炎を纏えるなら積極的にまとった方がいい。
 
 ## HP
 
-- HP, OD炎舞: 3400
+- HP, OD炎舞, OD飛翔: 3080
+- HP, OD炎舞, SA1: 3400
 - HP, OD炎舞, SA2: 4040
+- {端} HP, OD炎舞, SA2, 中飛翔: 4700
 - {端} HP, OD炎舞, SA2, OD飛翔: 5000
 - HP, OD炎舞, SA3: 5000
 
-SAを使う場合、HP, OD炎舞から直接入ると一番効率がいい。
+SAを使う場合、HP(+4)のコンボよりもHP, OD炎舞から直接入ると一番効率がいい。
 
 ## HP(+4)
 
@@ -93,6 +97,8 @@ SAを使う場合、HP, OD炎舞から直接入ると一番効率がいい。
 - {立} HP(+4), OD扇-h, HP, 強炎舞, 強飛翔: 3360
 - HP(+4), OD扇-h, HP, OD炎舞, 強飛翔: 3460
 - HP(+4), OD扇-h, HP, CR 4HK, 2MP, 強炎舞, 強飛翔: 3614
+- {焔1立} HP(+4), OD扇-h(焔), J.HK, HP, 強炎舞, 強飛翔: 3660
+- {焔2立} HP(+4), OD扇-h(焔), J.HK, HP, OD炎舞(焔), 強炎舞, 強飛翔: 4120
 - {立端} HP(+4), OD扇-h, HP, 強炎舞, SA1: 3600
 - HP(+4), OD扇-h, HP, OD炎舞, SA1: 3940
 - HP(+4), OD扇-h, HP, CR 4HK, 2MP, OD炎舞, SA1: 4078
@@ -101,8 +107,6 @@ SAを使う場合、HP, OD炎舞から直接入ると一番効率がいい。
   <!-- - {立} HP(+4), OD扇-h, HP, 強炎舞, 弱忍蜂, SA3: 5000 -->
 - {端} HP(+4), OD扇-h, HP, OD炎舞, SA2, OD飛翔: 5060
 - {立} HP(+4), OD扇-h, HP, 強炎舞, OD忍蜂, J.MP, 弱炎舞, SA3: 5380
-- {焔1立} HP(+4), OD扇-h(焔), J.HK, HP, 強炎舞, 強飛翔: 3660
-- {焔2立} HP(+4), OD扇-h(焔), J.HK, HP, OD炎舞(焔), 強炎舞, 強飛翔: 4120
 
 ## 2HP(+2)
 
@@ -129,11 +133,17 @@ DR HPが無難だけど、近かったら直接HPでも届く。
 ## 4HK(+4)
 
 - 4HK(+4), 2MP, 強炎舞, 強飛翔: 2920
+- 4HK(+4), 2MP, OD炎舞, 強飛翔: 3040
+- 4HK(+4), 2MP, OD炎舞, OD飛翔: 3320
 - {焔1} 4HK(+4), 2MP, OD炎舞(焔), 強炎舞, 強飛翔: 3440
 - {端} 4HK(+4), 2MP, 強炎舞, SA1: 3240
-- 4HK(+4), 2MP, OD炎舞, SA1 (AC2): 3760
+- 4HK(+4), 2MP, OD炎舞, SA1 (AC2): 3600
+- 4HK(+4), 2MP, 強炎舞, SA2: 3720
+- 4HK(+4), 2MP, OD炎舞, SA2: 4160
 - {端} 4HK(+4), 2MP, OD炎舞, SA2, 中飛翔: 4710
 - {端} 4HK(+4), 2MP, OD炎舞, SA2, OD飛翔: 4960
+- 4HK(+4), 2MP, 強炎舞, SA3: 4440
+- 4HK(+4), 2MP, OD炎舞, SA3: 5000
 
 ## J.MP
 
@@ -148,17 +158,17 @@ DR HPが無難だけど、近かったら直接HPでも届く。
 - 飛燕連脚, ODムササビ, 強飛翔: 2290
 - 飛燕連脚, ODムササビ, SA2: 3090
 
-## 扇(空)
-
-相手が扇を踏んだ場合のコンボ。
-
-- 扇(空)
-
 ## DI(pc)
 
 - DI(pc), HP, 強炎舞, 弱忍蜂: 2560
 - DI(pc), HP, 強炎舞, 強飛翔: 2760
+- DI(pc), HP, OD炎舞, 強飛翔: 3020
+- DI(pc), HP, OD炎舞, OD飛翔: 3260
+- DI(pc), HP, OD炎舞, SA1: 3500
+- DI(pc), HP, OD炎舞, SA2, 中飛翔: 4420
 - DI(pc), HP, 強炎舞, 弱忍蜂, SA3: 4560
+- DI(pc), HP, OD炎舞, SA3: 4700
+- DI(pc), HP, CR HK, 2MP, CR HK, 2MP, 強炎舞, 弱忍蜂, SA3: 5283
 
 ## DI(壁)
 
