--- a/games/Street-Fighter/Six/characters/Mai/舞の練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の練習メニュー.md
@@ -5,24 +5,13 @@
 （反撃設定 > ダウンリバーサル: 4F技）
 （反撃設定 > ダウンリバーサル: 何もしない）
 
-- 2LP, 2LP, 弱忍蜂, SA3, DR 4HK, ...
 - 2LP, 2LP, 弱忍蜂, ステップ, 前歩き, 2LK, LP/2LP, 弱忍蜂, ...
 - 2LP, 2LP, 弱忍蜂, ステップ, 前歩き, 前投げ, 弱扇-h, 前歩き
+- 2LP, 2LP, 弱忍蜂, SA3, DR 4HK, ...
 - 2LP(g), 2LP, ガード
 
 モダンならAC1でも可。ヒット確認が要らないので簡単。
 ただ、暴れでも使うので、2LPからもコンボにできた方がいい。
-
-## 中攻撃のヒット確認
-
-（ダミー設定 > ガード: ランダム）
-（ダミー設定 > 起き上がり: 後方受け身）
-（反撃設定 > ガードリバーサル: 通常投げ）
-（反撃設定 > ガードリバーサル: 何もしない）
-
-- 2MP, 2LP, 弱忍蜂, ステップ; 2MP, ...
-- 2MP(g), {投げ}, 2MP(pc), HP, 強炎舞, 強忍蜂, ステップ; 2MP, ...
-- 2MP(g), ガード
 
 ## 柔道
 
@@ -31,7 +20,17 @@
 
 - {端} 前投げ, ステップ, 前投げ, ...
 - {端} 前投げ, ステップ, 前投げ, {前方ジャンプ}, 弱飛翔
-- {端} 前投げ, ステップ, 2LP, 2LP, 弱忍蜂, ...
+- {端} 前投げ, ステップ, 2LK, LP/2LP, 弱忍蜂, ...
+
+## ジャンプ弱攻撃からの攻め
+
+（ダミー設定 > ガード: ランダム）
+（ダミー設定 > 起き上がり: 後方受け身）
+
+- J.LK, 飛燕連脚, ムササビ, 前J.LK, ...
+- J.LK, 飛燕連脚(g), ガード
+
+DR {HP/6MP}から繋いだ場合は前投げが早すぎるので1-4F遅らせる。
 
 ## 対空
 
@@ -62,8 +61,7 @@ MならまずはSPボタンで出せる弱飛翔でもいい。
 
 （簡単練習設定: 差し返しの練習）
 
-- 4HK(pc), DR HP, 強炎舞, 弱忍蜂, SA3, DR
-- 4HK(pc), DR HP, 強炎舞, 弱忍蜂, ステップ, 2LP/前投げ
+- 4HK(pc), DR HP, 強炎舞, 弱忍蜂, ステップ, 前歩き, 2MP/前投げ
 
 ## ラッシュからの攻め
 
@@ -79,12 +77,26 @@ MならまずはSPボタンで出せる弱飛翔でもいい。
 
 - DR 4HK(g), 後歩き, 2MP(pc), HP, 強炎舞, ...
 
-## 中足ラッシュからの攻め
+## キャンセルラッシュからの攻め
 
 （ガード: ランダム）
 
-- 2MK, CR 4HK, 2MP, 強炎舞, ...: 相打ちでも同じ
-- 2MK, CR 4HK(g), 投げ
+- HP/2MK, CR 4HK, 2MP, 強炎舞, ...: 相打ちでも同じ
+- HP/2MK, CR 4HK(g), 投げ
+
+## 中攻撃のヒット確認
+
+（ダミー設定 > ガード: ランダム）
+（ダミー設定 > 起き上がり: 後方受け身）
+（反撃設定 > ダウンリバーサル: 4F技）
+（反撃設定 > ダウンリバーサル: 何もしない）
+（反撃設定 > ガードリバーサル: 通常投げ）
+（反撃設定 > ガードリバーサル: 何もしない）
+
+- 2MP, 2LP, 弱忍蜂, ステップ; 2MP, ...
+- 2MP(c), 2MP, OD炎舞, 弱忍蜂, ステップ; 2MP, ...
+- 2MP(g), {投げ}, 2MP(pc), HP, 強炎舞, 弱忍蜂, ステップ; 2MP, ...
+- 2MP(g), ガード
 
 ## 高度な柔道
 
@@ -97,14 +109,6 @@ MならまずはSPボタンで出せる弱飛翔でもいい。
 - {端} 前投げ, ステップ, 後歩き, {2MK}, ガード, 2MP(pc),
 - {端} 前投げ, ステップ, 後歩き, {前方ジャンプ}, 後J.LK
 - {端} 前投げ, ステップ, 後歩き, {何もしない}, 前歩き, 前投げ
-
-## ムササビからの起き攻め
-
-- LK-LK-LK, ムササビ, ステップ x2, 2LK, LP, 弱忍蜂, SA3
-- LK-LK-LK, ムササビ, ステップ x2, 前投げ
-- (端) LK-LK-LK, ムササビ, ステップ x2, 前J.HK, 2MP, OD炎舞, ...
-
-DR {HP/6MP}から繋いだ場合は前投げが早すぎるので1-4F遅らせる。
 
 ## ゲージを使った確反
 
