--- a/games/Street-Fighter/Six/characters/ED/コンボ.md
+++ b/games/Street-Fighter/Six/characters/ED/コンボ.md
@@ -40,6 +40,9 @@ HPは強制立たせ効果がある。
 
 - HP, チェイス, 強ブリッツ: 2280
 - HP, OD紐, 弱アッパー, 強ブリッツ: 2879/2464
+- HP, OD紐, 弱アッパー, 強アッパー: 2935
+- HP, OD紐, 弱アッパー, SA1: 3375
+- HP, OD紐, 弱アッパー, 強ブリッツ, SA3: 4879
 
 ## HP, cDR HK
 
