--- a/games/Street-Fighter/Six/tips/モダン操作への対策.md
+++ b/games/Street-Fighter/Six/tips/モダン操作への対策.md
@@ -10,3 +10,5 @@
 
 モダンSAがあるために低ランク帯でもぬるい行動を咎められやすいというだけで、そもそもモダンに負ける人はぬるい行動をしている。
 高ランク帯になったらそもそもモダンでなくても咎められる。
+
+モダンSAに炊いてる人はそもそも行動がぬるい。モダンだろうがクラシックだろうが、相手にSAで咎められるところでぬるい行動を選ぶべきではない。
