--- a/games/Street-Fighter/Six/起き攻め.md
+++ b/games/Street-Fighter/Six/起き攻め.md
@@ -54,3 +54,5 @@
 後ろ歩きシミーできない起き攻めは弱め。ただ、有利フレームが短くても、遅らせ打撃で崩せなくはない。
 
 相手のジャンプや投げ抜けを狙って、重なってないけどリターンを取る打撃を選ぶ場合もある。
+
+投げなんて感覚で重ねればいいので、無理に+2や+4にしなくていい。
