--- a/shared/voice/training/tips/声帯を張る.md
+++ b/shared/voice/training/tips/声帯を張る.md
@@ -73,3 +73,5 @@ https://youtube.com/shorts/Zvpf7Lcfb2E?si=nc8lr40hK2s7h9x4
 極端に優しい声だけど、声は小さくなるからマイクに齧り付かないといけない。
 
 声帯に力を入れて動きを悪くするよりは、しっかり伸ばすことで緩みをなくした方がいい。
+
+メロディーみたいに声帯ゆるゆるで声を出すには息の圧が通常以上に必要。
