--- a/shared/communication/media/language/languages/japanese/日本語.md
+++ b/shared/communication/media/language/languages/japanese/日本語.md
@@ -1,3 +1,5 @@
 日本語は語彙をあまり使い回さない。新しい概念には言葉を新しく作ったり、略語や外来語を特別に扱ったりすることが多い。
 
 漢字だけでなく語彙もたくさん欲しいし、子供の頃から問いをたくさん持っているといい。
+
+日本語もチャンクから入った方がいいかも。「ねぇ」「聞いてよ」「元気？」とか。
