--- a/games/Street-Fighter/Six/characters/Vega/ベガの対策.md
+++ b/games/Street-Fighter/Six/characters/Vega/ベガの対策.md
@@ -29,6 +29,8 @@ LP, 2LPからの弱ダブルニーは4F技で相打ち。
 
 ベガは爆弾をもらったら一手目は投げ喰らってでもパリィした方がいい。特にSA3とドライブゲージが多い場合。中段から8000減る。
 
+サイコマインをつけられたら爆発にジャストパリィを狙うのもあり。
+
 ## その他
 
 爆弾がついてない時は、フックとかサイコには10F以上反撃の余裕がある。
