--- a/shared/business/ビジネスを続ける.md
+++ b/shared/business/ビジネスを続ける.md
@@ -7,3 +7,5 @@
 なんらかの手段で生活できないとビジネスを続けられない。
 
 ビジネスを続けるにはファイナンスも必要だし、ファイナンスのためには生産性や価値、マネジメント、マーケティング、などを考える必要もある。
+
+ビジネスは商売だけじゃないけど、続けていくためには商業化してファイナンスの基盤を整えないといけない。特にエンタメなんかはファンのウケが良くても商業的には失敗することがある。お金を持ってない層にしか受けなかったとか。
