--- a/shared/care/responsibility/責任感の示し方.md
+++ b/shared/care/responsibility/責任感の示し方.md
@@ -4,3 +4,6 @@
 - 楽しみにしています
 - 大変だね
 - かわいそうだね
+
+責任をとって辞職なんてのはなんの責任もとってない。批判から逃げているだけで、徹底的に追い詰めるべき。責任を取るというのは腹を切るということ。
+特に政治家が大臣を辞めるとか役職を辞めるのは本当に何の意味もない。せめて議員辞職するまでは追い詰めるべき。
