--- a/shared/music/vocal/training/tips/曲を覚える.md
+++ b/shared/music/vocal/training/tips/曲を覚える.md
@@ -98,3 +98,5 @@
 まずは全部uhで歌ってレガートにする。この時点で途切れるなら、そもそもの発声がおかしい。フレーズの途中で変に呼吸を切ったりしているはず。
 次に、母音だけで歌ってレガートにする。この時点で途切れるなら、母音の発音がおかしい。日本語では特に「い」で喉の奥を締めてしまったり、「う」で唇を動かしすぎたりする。まずは顎や唇を動かさず、舌だけで母音を変えられるようにする。
 最後に、子音も乗せてレガートにする。子音を乗せると口を閉じたりするので、基本的にレガートは切れるが、できるだけ途切れたように聞こえないように練習する。
+
+曲を覚える時はまずリズムを知らないといけない。テンポとアクセント、それが歌詞とどう対応するか。曲によっては拍子やテンポが変わることもある。
