--- a/games/Street-Fighter/Six/characters/Mai/舞の攻め.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の攻め.md
@@ -1,104 +1,49 @@
-## 2LP, 2LP: 1-5
+## 概要
 
-ヒット確認で強忍蜂やCDR 2LPが繋がる。
+忍蜂が優秀。
+運べるし、ノーゲージで密着から起き攻めできる。
 
-投げ間合いなら基本的には2回、密着なら3回まで。
+2MPを重ねるのが基本。
+ヒットしたら2LPが入るし、ガードされても投げの外で-3になるだけ。
 
-カウンター確認できるなら2MPも繋がるけど、猶予が短い。動いた確認できるといい。
+2LK, 2LPで固めるのも悪くない。
 
-## 2LP, OD扇: 1-5
+ガードさせて有利になる通常技がないので、ガードされたら止める。
+中以上の打撃を重ねるならラッシュか持続重ねにする。
+ラッシュすると投げとシミーの二択は狙いにくくなるので、中下段と投げで崩す。
 
-- 2LP, OD扇
-- 2LP(g), OD
-- 2LP(g), OD扇, 垂直J.HK: シミー
+中以上で普通に重ねてヒット確認できるのは2MPと4HKくらい。
+ただ、4HKは端以外ではダメージが伸びないので端のみ。
 
-## 2LP, 2LP, OD扇: 1-5
+舞を知らない人ならHPから扇で固めてさらにHPを当てるループが強力。
 
-- 2LP, 2LP(g), OD扇(g), (扇(g)): 扇が当たったのを見てから歩き投げやラッシュを重ねられる
+忍蜂、飛翔、SA2、SA3あたりからループするのが強力。
+中央ではOD炎舞, 弱忍蜂の状況が悪いので、できれば強炎舞にするか、SA1で締めて扇から改めて攻め込むのが強い。
 
-- 2LP, 2LP, OD扇, 2MP, (扇), 2MP: 2MPに無敵技以外で割り込めない、2MPから連続ガード
-- 2LP, 2LP(g), OD扇(c), 2MP, (扇), 2MP, ...: 2MPが4F技と相打ちになってコンボ、カウンターで4-5F
+## 端攻め
 
-## 2LP, 2LP, 2LP
+端では2MPよりも4HKを重ねたい。
+ヒット確認からTCに繋いで、中飛翔で2660、SA1で3200入る。
 
-密着から刻んで離れる。
+リーサルなら4HKよりも2MPやラッシュなどから入って伸ばす。
 
-- 2LP, 2LP, 2LP, HP: 相手のLPの外から潰す
+## ラッシュ
 
-## 飛燕連脚: 1-5
+基本的に重ねられるなら4HKが安定。強制立たせ効果で、当たれば強炎舞が使える。
 
-ヒット確認してムササビが繋がる。
-ガードされると-10だが、端以外ではほとんどの大足の外。長めのSAなどは注意が必要。
+6MPが中段。
+余裕があるところでは中下段を狙いたい。
 
-## 2LK, 2LP: 2-5
+## シミー
 
-下段から崩す。
-舞は投げ間合いギリギリになる起き攻めも多く、下段が当たる後退と投げの択になる。
+- 2MP(pc), HP, ...
 
-## 2MP: 3-5
+2MPが発生6Fで、パニカンするとHPが繋がるので使いやすい。
 
-ヒット確認で+5から2LPが繋がる。
-ガードされると-3だが投げ間合いの外。
-カウンターすると2MPが入るので一気にダメージが伸びる。カウンター確認もできると良い。
+## 詐欺飛び
 
-## 4HK: 4-9
+一応、HK(pc), HKが42だけど、ダメージが大幅に下がる。
 
-ヒット確認から4HK-HKに派生できる。端ではさらにSAや飛翔で拾える。
-ガードされても-1で投げ間合いの外。
+## その他
 
-## 2MP(+1): 6-8
-
-ヒット確認で+6から2MPが繋がる。
-ガードされても-2以下で投げ間合いの外。
-
-## HP, 扇: 6-10
-
-少し遠めから触って崩す。
-
-- HP, 弱扇: HP先端なら連続ガードから+4くらい
-- HP, 弱扇-h, 前歩き, (扇), HP: 当たるまで11-15Fくらい、ガードされてもさらに攻め継続
-- HP, 強扇-h, ステップ, 前投げ: 当たるまで11-13Fくらい、追撃が当たる前に投げ
-- HP, 強扇-h, ステップ, 2LP, (扇), HP: 当たるまで11-13Fくらい、ガードされてもさらに攻め継続
-- HP, 強扇-h, ステップ, ガード: シミー
-
-## 4HK(+1): 8-9
-
-ヒットすると2LPが繋がる。
-ガードされても五分以上。
-カウンターヒットすると2MP, 強炎舞が入るのでできればカウンター確認したい。
-
-## 4HK(+3): 10-11
-
-ヒットすると2MP, 強炎舞が入る。
-ガードされても+2以上。
-
-## DR 2LP: 13-16
-
-ヒット確認で+8からコンボ。
-ガードされても+3で投げ間合い。密着すれば2LK, 2LPも届く。
-
-## DR 2LK: 14-17
-
-ヒット確認で+6から2LPや2MPが繋がる。
-ガードされても+2で投げ間合いからさらに攻め継続できる。
-
-## DR 4HK: 16-22
-
-ヒット確認で+7から2MPが繋がり、強制立たせ効果がある。
-ガードされても+3で投げ間合いからさらに攻め継続できる。ただ、後ろ下がりで投げが届かないので、下段との読み合い。
-
-- DR 4HK, 2MP, 強炎舞, ...
-- DR 4HK(g), 2LK, LP, ...
-- DR 4HK(g), 前投げ
-
-## 弱炎舞(+4): 17-19
-
-17Fの時にヒットで+7、ガードで五分になる。
-ガードされると投げ間合いなので、2LPで暴れるか、様子見か。
-どっちにしても2LP, 2LPと刻むのが無難だけど、2MPにもいける。
-19Fの時はHPにもいけるけど、2MPで十分。
-
-## DR 6MP: 27-32
-
-中段。ヒットすると2MPが繋がる。
-ガードされても+1で投げ間合い。後歩きでシミーにもなる。
+弱炎舞は一応当たってたら2MPから。
