--- a/games/Street-Fighter/Six/tips/モダン操作への対策.md
+++ b/games/Street-Fighter/Six/tips/モダン操作への対策.md
@@ -12,3 +12,8 @@
 高ランク帯になったらそもそもモダンでなくても咎められる。
 
 モダンSAに炊いてる人はそもそも行動がぬるい。モダンだろうがクラシックだろうが、相手にSAで咎められるところでぬるい行動を選ぶべきではない。
+
+相手がAC1のヒット確認に頼っていて、AC1で出る弱攻撃2段目と必殺技が2hit以内なら、あえて1段目だけガードしてインパクトで暴れるのも序盤のモダン対策。
+ルーク、ジェイミー、キンバリー、マリーザ、リリー、ジュリ、キャミィ、ブランカ、ケン、ラシード、AKI、テリーあたり。
+ただ、マノン、ディージェイ、リュウ、春麗、ダルシム、豪鬼、はヒット確認がついてないので起き攻めでは使ってこないはず。
+それ以外のJP、本田、ガイル、ザンギ、ED、ベガ、舞は破られる。
