--- a/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
@@ -130,6 +130,12 @@ DR HPが無難だけど、近かったら直接HPでも届く。
 - HK(pc), DR HP, 強炎舞, 強飛翔: 2600
 - HK(pc), DR HP, 強炎舞, 弱忍蜂, SA3: 4432
 
+## 4HK
+
+- {端} 4HK-HK, 中飛翔
+- {端} 4HK-HK, OD飛翔
+- {端} 4HK-HK, SA1
+
 ## 4HK(+4)
 
 - 4HK(+4), 2MP, 強炎舞, 強飛翔: 2920
@@ -208,3 +214,9 @@ DR HPが無難だけど、近かったら直接HPでも届く。
 LP, 弱炎舞が繋がるけどダメージも弱忍蜂と変わらないので使わない。
 
 とりあえずOD炎舞に繋いでおけばSA3種が中央でも入るので、まずはキャンセルラッシュよりもOD炎舞に繋ぐことを考える。
+
+AC1は優秀。勝手にヒット確認してくれる。
+
+AC2は優秀。SA1に行けるルート。ただ、OD炎舞まで出し切ると確反なのでヒットする時だけ出し切る。
+
+AC3は弱炎舞〆よりムササビ〆の方が起き攻めしやすいし、火力も出る。SA3に行かないならムササビ〆にした方がいい。
