--- a/games/Street-Fighter/Six/characters/Mai/舞の対策.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の対策.md
@@ -49,3 +49,7 @@ LK-LK-LKで後ろに跳んだあとは遠いけど-10なので、キャラによ
 近距離の扇には確反があると思っていい。ヒットでも微有利になることが多い。
 
 舞の甘えた溜め花蝶扇を見てからインパクトはあり。
+
+モダンは強炎舞, 弱忍蜂のあとAC1のLPが届かないので、起き上がりに後退しておくと攻めにくい。ただ、それも知っている人だと2LK, 2LPにしてくる。
+
+モダン昇竜が弱なので、判定が後ろに下がるジャンプ攻撃とかでうまいこと避けられる場合がある。ザンギのJ.LKとか落としづらい。
