--- a/games/Street-Fighter/Six/characters/Mai/舞の攻め.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の攻め.md
@@ -20,12 +20,25 @@
 忍蜂、飛翔、SA2、SA3あたりからループするのが強力。
 中央ではOD炎舞, 弱忍蜂の状況が悪いので、できれば強炎舞にするか、SA1で締めて扇から改めて攻め込むのが強い。
 
-## 端攻め
+## 中央の攻め
+
+忍蜂の後はノーゲージでもある程度強いけど、ゲージに余裕があったら昇竜で締めてラッシュした方がいい。DR 4HKや中下段が強い。
+
+## 端の攻め
 
 端では2MPよりも4HKを重ねたい。
 ヒット確認からTCに繋いで、中飛翔で2660、SA1で3200入る。
 
 リーサルなら4HKよりも2MPやラッシュなどから入って伸ばす。
+
+遠めからOD扇を当てておくのも強い。
+
+## 扇を使った攻め
+
+溜めかODの扇を当てたら攻めのターンになる。
+
+相手としては空中なら扇に当たってもいいくらいの感覚で昇竜をぶっ放してくることもある。
+相手がどういう対応をするか、まずは様子見が基本。
 
 ## ラッシュ
 
