--- a/games/Street-Fighter/Six/characters/Mai/舞の立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の立ち回り.md
@@ -4,6 +4,7 @@
 離れすぎると動きづらい。
 
 前に出ることもできるけど、基本的にはHPやHKを振りながら下がりたい。
+HKの圧でラインを押し上げつつ、実は下がるような動きをとる。
 
 忍蜂で運び性能も高いので下がれる。
 
@@ -31,16 +32,20 @@ HPやHKはかなり判定が前に出るので、空振りは危険。
 
 ゲージが余ってたら積極的にラッシュやOD扇を狙う。
 
-溜め花蝶扇は初段をガードしたあと舞側に余裕があるので、相手の動きを見やすい。様子見で近づいておいて、強い攻めを狙いやすい。ただ遅い弾よりも強いところ。
-
-OD扇で相手の波動拳を相殺するのが強い。
-
-OD扇がとにかく強いので積極的に使いたい。発生12Fで、HKの外くらいで当てるとコンボにもいける。インパクトには注意。
-
 お互いにコパコパの2回目が届かないくらいの距離だと、2MPが強い。発生6Fで2LPが繋がる。ただ、離れると繋がらないので距離の判別が難しい。コパコパが届くならコパコパでいいし。
 
 弱/中炎舞の先端を当てると長い。
 ただ、リスクも高い。
+
+## 飛び道具
+
+弾の撃ち合いにはOD扇が強い。しれっと相手の弾を潰してこっちのターンになる。
+
+OD扇で相手の波動拳を相殺するのが強い。
+HKの外くらいから投げるとラッシュも狙える。
+
+溜め花蝶扇は初段をガードしたあと舞側に余裕があるので、相手の動きを見やすい。様子見で近づいておいて、強い攻めを狙いやすい。ただの遅い弾よりも強いところ。
+ただ、扇自体のダメージは小さいので、無理やり昇竜暴れしてくる場合がある。
 
 ## 対空
 
