--- a/games/Street-Fighter/Six/characters/Mai/舞の練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の練習メニュー.md
@@ -141,5 +141,11 @@ MならまずはSPボタンで出せる弱飛翔でもいい。
 
 ## 端の攻め
 
-- 4HK-HK, 中飛翔/SA1
-- 4HK(g), ガード
+（ダミー設定 > ガード: ランダム）
+
+- 弱忍蜂, ステップ, 4HK-HK, 弱飛翔, ステップ, 4HK(+4), 2MP, 強炎舞, 弱飛翔, 4HK(+4), ...
+- 弱忍蜂, ステップ, 4HK-HK, 弱飛翔, ステップ, 4HK(+4)(g), 2MP, 2LP, 弱忍蜂, ...
+- 弱忍蜂, ステップ, 4HK-HK, 弱飛翔, ステップ, 4HK(+4)(g), 2MP(g), ガード
+- 弱忍蜂, ステップ, 4HK(+1)(g), 2LP, ガード
+
+コマンドが必要。
