--- a/games/Street-Fighter/Six/tips/対戦環境.md
+++ b/games/Street-Fighter/Six/tips/対戦環境.md
@@ -10,6 +10,9 @@ PS5はVRR対応モニターでないとラグい。
 
 回線が悪いなら、グラップはできるだけ避けたほうがいい。いっそ無敵技の方がマシ。
 
+Wi-Fiの4は地雷。
+有線の4でもたまに入力が遅れるけど、まぁ何とかなる。
+
 ## ステージ設定
 
 対戦のステージは強制的にトレモステージにしたほうがいい。インパクトも返しやすいし、描画も速い。
