--- a/games/Street-Fighter/Six/characters/Jamie/コンボの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Jamie/コンボの選択肢.md
@@ -2,6 +2,11 @@
 
 端ではOD疾歩に繋ぐのが強い。
 
+弱流酔拳は1段目がヒットしても2段目が当たらないこともあるゴミ技なのでできるだけ使わないようにコンボを組んだ方がいい。
+
+ジェイミーのSA3は早めに出して追撃を伸ばした方が強い。
+補正がかかる前に使うのでできればコマンド入力したいところ。
+
 ## (酔1) LP
 
 - (酔1) LP-LK-MP, 弱酔疾歩: 1280
@@ -154,10 +159,6 @@ MK, cDR MP, 2HP, 強酔疾歩-P, SA3, OD酔疾歩, 2HK-酒: 4713
 - DI(pc), 2HP, 強酔疾歩: 2264
 - DI(pc), 2HP, 強酔疾歩, SA3, 強酔疾歩: 3892/3820
 - (端) DI(pc), 2HP, 強酔疾歩, SA3, OD酔疾歩, 2HK-酒: 4054
-
-## 基本
-
-弱流酔拳は1段目がヒットしても2段目が当たらないこともあるゴミ技なのでできるだけ使わないようにコンボを組んだ方がいい。
 
 ## 確反
 
