--- a/games/Street-Fighter/Six/characters/Jamie/ジェイミーの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Jamie/ジェイミーの攻めの状況.md
@@ -1,9 +1,24 @@
+## MP(g): 2
+
+ガードでも+2になる。
+特に酔1からはLP-LK-MPのTCが使いやすい。
+
 ## HP: 1
 
 ヒットしたら密着1になる。
 2LP, LPからヒット確認してLP-LP-LP, 弱張弓腿が基本。
 
 - 2LP, LP: ヒット確認から弱コンボ
+
+## HK(g): c
+
+- HK(g), 強疾歩: ガードされて-3、6F以内の技で割り込める
+- HK(g), 強酔拳: ガードされて-6、無敵技以外で割り込めない
+- HK(g), OD疾歩: ガードされて-1、無敵技以外で割り込めない
+- HK(g), CR MP: 連続ガードで+6
+  - HP/2MP: 連続ガードで削り
+  - 前歩き, 前投げ
+- HK(g), CR LK, 投げ
 
 ## 2HK-酒: 4
 
