--- a/games/Street-Fighter/Six/characters/Jamie/ジェイミーのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Jamie/ジェイミーのコンボ.md
@@ -1,11 +1,19 @@
 ## 概要
 
+ダメージは酔2で記載する。
+現在編集中。
+
 端ではOD疾歩に繋ぐのが強い。
 
 弱流酔拳は1段目がヒットしても2段目が当たらないこともあるゴミ技なのでできるだけ使わないようにコンボを組んだ方がいい。
 
 ジェイミーのSA3は早めに出して追撃を伸ばした方が強い。
 補正がかかる前に使うのでできればコマンド入力したいところ。
+
+## 確反
+
+HK(pc), ステップ, 2HPルートが基本。
+端でOD酔疾歩が入るなら使った方がいい。
 
 ## (酔1) LP
 
@@ -92,16 +100,15 @@ MK, cDR MP, 2HP, 強酔疾歩-P, SA3, OD酔疾歩, 2HK-酒: 4713
 
 ## HK(pc)
 
-- HK(pc), HK, 強流酔拳-PP: 1831
-- HK(pc), 強酔疾歩: 1944
-- HK(pc), ステップ, 2HP, 弱張弓腿: 2394
-- HK(pc), ステップ, 2HP, 強酔疾歩: 2538
-- HK(pc), ステップ, 2HP, 強張弓腿: 2682/2472
-- (端) HK(pc), ステップ, 2HP, OD酔疾歩, 2HK-酒: 3240
-- (端) HK(pc), ステップ, 2HP, OD酔疾歩, 強張弓腿: 3348
-- HK(pc), ステップ, 2HP, 強酔疾歩, SA3, 強酔疾歩: 4174
-- (端) HK(pc), ステップ, 2HP, 強酔疾歩, SA3, OD酔疾歩, 強張弓腿: 4716/4440
-- (端) HK(pc), ステップ, 2HP, 強酔疾歩, SA3, OD酔疾歩, 2HK-酒: 4644/4554
+- (端) HK(pc), HK, 強酔拳-P-P: 2542-3305
+- HK(pc), ステップ, 2HP, 強酔疾歩: 2820
+- HK(pc), ステップ, 2HP, 強張弓腿: 2980
+- (酔2) HK(pc), ステップ, 2HP, 強爆廻: 3300
+- (端) HK(pc), ステップ, 2HP, OD酔疾歩, 2HK-酒: 3600
+- (端) HK(pc), ステップ, 2HP, OD酔疾歩, 強張弓腿: 3720
+- HK(pc), ステップ, 2HP, 強酔疾歩, SA3, 強酔疾歩: 4860
+- (端) HK(pc), ステップ, 2HP, 強酔疾歩, SA3, OD酔疾歩, 強張弓腿: 5240
+- (端) HK(pc), ステップ, 2HP, 強酔疾歩, SA3, OD酔疾歩, 2HK-酒: 5160
 
 ## (酔4) 6HK
 
@@ -159,8 +166,3 @@ MK, cDR MP, 2HP, 強酔疾歩-P, SA3, OD酔疾歩, 2HK-酒: 4713
 - DI(pc), 2HP, 強酔疾歩: 2264
 - DI(pc), 2HP, 強酔疾歩, SA3, 強酔疾歩: 3892/3820
 - (端) DI(pc), 2HP, 強酔疾歩, SA3, OD酔疾歩, 2HK-酒: 4054
-
-## 確反
-
-HK(pc), ステップ, 2HPルートが基本。
-端でOD酔疾歩が入るなら使った方がいい。
