--- a/games/Street-Fighter/Six/characters/Ken/ケンの対策.md
+++ b/games/Street-Fighter/Six/characters/Ken/ケンの対策.md
@@ -46,6 +46,8 @@ SA3があったらインパクトは危険。
 
 ケンは遠めの迅雷が届かないこともあるので、ガードできるタイミングで差し返しを仕込んでおく。
 
+迅雷脚はまずジャストパリィを狙って、相手が止めてくるようなら7F以下の中攻撃で割り込みも狙う。
+
 ## 龍尾脚
 
 発生前にインパクトを出せたら確定する。
