--- a/games/Street-Fighter/Six/characters/Zangief/ザンギエフの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Zangief/ザンギエフの立ち回り.md
@@ -22,6 +22,8 @@ J.2HPが密着からでもめくれて、対空にも強い。
 LKやMPで固めて投げるのが基本的な崩し。
 モダンならSA3でもいい。
 
+ザンギは3投げが中央でも強い。ステップからコマ投げが重なる。
+
 ## 守り
 
 守りは厳しいが、2LKや2LPが長いので通常技暴れは優秀。
