--- a/shared/lifestyle/cooking/recipes/スコーン.md
+++ b/shared/lifestyle/cooking/recipes/スコーン.md
@@ -17,3 +17,7 @@ https://youtube.com/watch?v=xJ-Ntt66gx4&si=iLOYvhz85T3SRySt
 グラニュー糖の方がサクサクになりやすい。上白糖はしっとりする。
 
 スコーンは何度も折って薄く重ねると綺麗に割れる。凸凹にしたいならあまり綺麗に折らない。4回くらいでいい。
+
+スコーンなどサクサクにしたいものはバターと粉を先に混ぜて粉をまとわせてから砂糖を入れる。バターと砂糖が直接触れると水分が出てべちゃっとなりやすい。
+あと生地ができたら冷蔵庫で一旦冷やすのも効果がある。
+https://youtu.be/LofcIMc1AZQ?si=wQZQJmHbOWGnwaiq
