--- a/shared/lifestyle/cooking/recipes/卵料理.md
+++ b/shared/lifestyle/cooking/recipes/卵料理.md
@@ -27,3 +27,6 @@ https://youtube.com/watch?v=SwSXBXGgtk0&si=yUK2UYthoKujQI-_
 茶碗蒸しの具材は、しいたけ、かまぼこ、鶏肉、など。三つ葉は上に載せる。
 
 卵を焼きすぎると臭みが出る。
+
+だし巻き
+https://youtu.be/Q57oyenBDI0?si=4SY8zEABZl2Yh0uy
