--- a/shared/lifestyle/cooking/recipes/麺料理.md
+++ b/shared/lifestyle/cooking/recipes/麺料理.md
@@ -28,3 +28,7 @@
 https://youtube.com/watch?v=hwperaeQp48&si=2fa1v7MQSzEeeKWX
 
 https://youtube.com/watch?v=5RjPuXXvmSE&si=A9MddwtqrwRgv7Fa
+
+## その他
+
+焼きそばはしっかり麺を焼いて水分を抜いてから置いといて、それから肉を炒めて戻すことでよくうまみが入る。
