--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -56,3 +56,8 @@
 声をかけられる人、連絡が来る人というのはどうしているか。
 
 誰かの家に遊びにいって夕食もご馳走様してもらうときは2000円くらいの高すぎないお土産を持っていくのもいい。
+
+話を遮ったり否定したりしない。まずは品性を身につける。話の内容とかはそれからでいい。
+あと会話の流し方を覚える。流れを止めない。
+
+社交的な会話では前置きが大事。猿の毛繕いみたいなもの。会話の内容よりもまず、相手への気遣いを見せる。
