--- a/shared/voice/training/tips/声を出す.md
+++ b/shared/voice/training/tips/声を出す.md
@@ -242,3 +242,5 @@ https://youtu.be/OEjipkH95_0?si=9RxpD90fqQnpNSXy
 声を出す時は体を広げる意識。特に首を外に引っ張って、気道を広げるイメージ。
 
 サンボマスターは横隔膜を上げて、腹筋で息をたくさん使って、息も荒く、仮声帯をガラガラ鳴らす。
+
+声を抑えずにコントロールできるようにしたい。開放的に歌いつつ、抑揚をつける。
