--- a/shared/voice/training/tips/声色を変える.md
+++ b/shared/voice/training/tips/声色を変える.md
@@ -89,6 +89,10 @@ Aimer『I beg you』とか。
 
 ハスキーボイスは技術でうまく出すのが難しくて、才能の面が強い。
 
+## 色っぽい声
+
+色っぽい声を出すには、息漏れではなく息の太さが重要。結果的に漏れるだけ。
+
 ## その他
 
 トーンはまず一定にして、地声で一通り歌えるといい。
