--- a/shared/execution/planning/project/management/プロジェクト.md
+++ b/shared/execution/planning/project/management/プロジェクト.md
@@ -94,3 +94,5 @@
 プロダクトやサービスと違って、明確な終わりがある。
 ただ、プロダクトやサービスも売れなかったり古くなったりするといずれ終了することはある。
 明確な終わりというよりは、初めから終わりを前提としているかどうかといったほうがいいかも。
+
+プロジェクトをバラして、プロジェクトじゃなくなるならそれが一番いい。
