--- a/shared/health/tips/肩こりの治し方.md
+++ b/shared/health/tips/肩こりの治し方.md
@@ -1,1 +1,5 @@
 [やってはいけない「巻き肩」の治し方と正しいストレッチ方法 ｜京都市北区 もり鍼灸整骨院 - YouTube](https://youtu.be/4p-nIjxTmMQ?si=5LQbHsnzoYwfAkO1)
+
+首の後ろ側が痛いと感じても、むしろ首の前方の筋肉が凝っている場合がある。
+首の前方の大きな筋肉をほぐすと楽になる。
+https://youtu.be/_IvmvcbQgZ4?si=sWdKehu2v7mCT4dr
