--- a/shared/voice/training/良い声とは.md
+++ b/shared/voice/training/良い声とは.md
@@ -56,3 +56,6 @@ http://hira0888.life.coocan.jp/asu124.html
 腹から声を出すのと低い位置で音を鳴らすのが両方できてくると声の響きが深く柔らかくなっていく。ただ、まずは腹から声を出すのが先。
 
 まずは安定した雑音のない声を目指す。安定を崩したり、雑音を乗せたりするのは簡単。逆に、安定した雑音のない声は難しい。
+
+他にない声は良い。無理に普通にする必要はない。
+ただ、歌うときにピッチを変えづらいとか他の課題と複合した場合にどうするかが問題。良い歌い方と上手く統合させる必要がある。
