--- a/shared/war/敵対.md
+++ b/shared/war/敵対.md
@@ -22,3 +22,7 @@ LoseWinの関係をLoseLoseに持っていく。
 
 恨みを買うなら殺すべき。
 殺さないなら恨みを買うべきではない。きちんと示談に持ち込む。
+
+物語ならいいけど、現実で決闘するほど敵対するなら殺した方がいい。そもそも決闘とは命を賭けるものだ。
+
+物語でも決闘で普通に殺し合うために命を賭ける宣誓をする手順を踏むといいかも。
