--- a/games/Street-Fighter/Six/characters/ED/コンボ.md
+++ b/games/Street-Fighter/Six/characters/ED/コンボ.md
@@ -36,11 +36,12 @@ HPは強制立たせ効果がある。
 
 ## HP
 
-キャンセル猶予が長いので、モダンなら結構簡単にワンパン確認できる。
+キャンセル猶予が長いので、特にモダンなら結構簡単にワンパン確認できる。
 
 - HP, チェイス, 強ブリッツ: 2280
 - HP, OD紐, 弱アッパー, 強ブリッツ: 2879/2464
 - HP, OD紐, 弱アッパー, 強アッパー: 2935
+- HP, OD紐, 弱アッパー, ODアッパー: 3155
 - HP, OD紐, 弱アッパー, SA1: 3375
 - HP, OD紐, 弱アッパー, 強ブリッツ, SA3: 4879
 
@@ -82,6 +83,7 @@ HPは強制立たせ効果がある。
 - 弱紐(pc), DR MK-MK-MK: 2220
 - 弱紐(pc), DR HP, OD紐, 強ブリッツ: 3060
 - 弱紐(pc), DR HP, OD紐, 強アッパー: 3116
+- 弱紐(pc), DR HP, OD紐, ODアッパー: 3336
 - 弱紐(pc), DR HP, チェイス, SA1: 3228
 - 弱紐(pc), DR HP, チェイス, SA3: 4408
 - 弱紐(pc), DR HP, OD紐, 強ブリッツ, SA3: 5060
@@ -92,6 +94,9 @@ HPは強制立たせ効果がある。
 - 中紐(pc), DR MK-MK-MK: 2340
 - 中紐(pc), DR 2HP, OD紐, 強ブリッツ: 3180
 - 中紐(pc), DR 2HP, OD紐, 強アッパー: 3236
+- 中紐(pc), DR 2HP, OD紐, ODアッパー: 3456
+- 中紐(pc), DR 2HP, チェイス, SA1: 3188
+- 中紐(pc), DR 2HP, OD紐, SA1: 3676
 - 中紐(pc), DR 2HP, OD紐, 強ブリッツ, SA3: 5180
 
 ## 弱/中紐-h
@@ -105,7 +110,11 @@ HPは強制立たせ効果がある。
 ## OD紐
 
 - OD紐, 弱アッパー, 強ブリッツ: 2180/1744
+- OD紐, OD紐, 強アッパー: 2540
+- OD紐, OD紐, ODアッパー: 2800
 - OD紐, 弱アッパー, SA1: 2720/2176
+- OD紐, 弱アッパー, 強ブリッツ, SA3: 4180
+- OD紐, OD紐, 強ブリッツ, SA3: 4474
 
 ## (空) 弱アッパー
 
