--- a/games/Street-Fighter/Six/characters/Guile/ガイルのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルのコンボ.md
@@ -114,6 +114,13 @@
 - 4MK(+4), MP, 2MP, 強サマー, SA3: 4240
 - {C} 4MK(+4), HP, cDR HK, 2MP, 強サマー, SA3: 4586
 
+## 6MK(+1)
+
+主にカウンターから。
+
+- 6MK(+1), 2LP, 強サマー: 2120
+- 6MK(+1), 2LP, 強サマー, SA3: 4520
+
 ## {C} HP(pc)
 
 - {C} HP(pc), 3HK, 強サマー: 2860
@@ -154,6 +161,14 @@
 - {端} 6HK(pc), 2HK-3HK, 強サマー: 2830
 - {C端} 6HK(pc), HP, cDR HK, 強サマー: 3470
 
+## {空} ブレイド
+
+相手がブレイドを踏んだ場合のコンボ
+
+- {空} ブレイド, 強サマー: 1800
+- {空} ブレイド, ODサマー: 2000
+- {空} ブレイド, SA1: 2400
+
 ## ODブレイド-ODクロス(壁)
 
 - ODブレイド-ODクロス(壁), DR HK, 強サマー: 3332
@@ -175,17 +190,19 @@
 
 ## DI(壁)
 
-- DI(壁), HK, 強サマー: 2420
+- DI(壁), 2MP, 強サマー: 2260
 - {C} DI(壁), 3HK, 強サマー: 2580
 - DI(壁), 4HP, 強SA1, ODサマー: 3480
 - DI(壁), 強サマー, SA3: 4320
-- DI(壁), HK, 強サマー, SA3: 4420
 
-ガードだと3HKが当たらないので、2HK-3HKにする。ダメージは下がる。
+上手く入れたらHPもいけるけど難しめ。
 
 ## DI(g)(壁)
 
+ガードだと3HKが当たらない。
+
 - DI(g)(壁), 2MP, 強サマー: 1600
+- DI(g)(壁), MP-4HP, 強サマー: 1856
 - DI(g)(壁), 4HP, 強SA1, ODサマー: 2912
 - DI(g)(壁), 4HP, SA3: 3840
 
