--- a/games/Street-Fighter/Six/characters/Guile/ガイルの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの攻めの状況.md
@@ -28,14 +28,17 @@
 
 - DR HK
 - DR 2MK
--
 
 ## 強サマー: 39
 
 ## ODサマー: 29
 
-## SA1-上, ODサマー: 33
-
 ## SA1: 41
 
+## 強SA1, ODサマー: 33
+
 ## SA3: 16
+
+相手のジャンプ攻撃が届かない距離なので、ブレイド設置が基本的に安定。相手が前ジャンプしたら踏む。
+
+ブレイド設置は、ザンギのSA2、キャミィのSA3、ベガのSA2、には咎められる。
