--- a/games/Street-Fighter/Six/characters/Guile/ガイルの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの立ち回り.md
@@ -1,67 +1,3 @@
-## 差し合い
-
-差し合いはとにかくソニック。近距離でもソニック。飛ばせて落とす。
-
-- ソニック
-
-近すぎたら小パンや中足で離す。
-
-- 2LP
-- 2MK
-
-正直、サマソは溜めてもすぐ裏に抜けるので無駄。基本は2HPとMKで落とす。
-サマソを溜めるよりも距離を調整する方が重要。
-
-## 飛び道具
-
-- 緩急をつける
-- たまにラッシュを混ぜる
-- 近距離であえて弾を撃つ
-- ジャンプ攻撃が届かない距離では、前に出るよりも弾を撃つ
-- 見てからジャンプできる距離では弾を撃たない
-- 余裕があったらソニックよりもクロスにする
-- 遠距離で遅い弾を撃ったら前に出る
-- ブレイドで止めてジャンプを誘うならサマソを溜める
-- 立ちを見てジャンプする相手には、あえて立って通常技で対空する
-
-隙があったらクロスにしたい。
-
-強/ODブレイドは2発分になるので、1発相殺しても残ってソニックをクロスにできる。
-
-ODブレイドは普通のソニックがODクロスになる。
-
-弾の撃ち合いは強ブレイドで相手の弾を一発受けてからクロスに派生するのが強い。発生は遅いので、ソニックをガードさせた後とか。
-
-近距離で弾を撃っているとインパクトで返されがち。
-2LP, 2MP, 4HPなどを置くと返しやすい。
-
-ガイルはまず遠距離で弾を撃って、相手が前に出たりパリィで待ったりするところにラッシュで崩すのが強い。弾の回転数と強弱の使い分けが大事。弱を追ってラッシュするのが基本。
-
-ガイルは意外と弾を撃っていい射程が遠め。対空が溜め技なので、ジャンプ攻撃される距離では確定しなくてもガードさせられる。
-ただ、相手が跳んでくるように近距離でも余裕があれば弾を見せておきたい。相手の空振りとか、相手がジャンプできないタイミングで後出しするのが基本。
-
-焦って攻めさせられるとガイルは弱い。相手が攻めてこないなら余裕を持って弱ブレイドを盾に歩けばいい。
-
-最遠距離で弱クロスを撃つと遠すぎて簡単に前ジャンプされて近づかれる。
-歩きなり膝なりで相手の前ジャンプに下溜めが間に合う程度まで前に出るか、撃つなら中強クロスにしたい。
-
-遅い弾を撃ったら前に出る、ブレイドで止めてクロスを撃たないならサマソを溜める、みたいに弾とその後の動きを基本的には一貫させたい。まぁ、ワンパターンだとそれはそれで狩られるけど。一貫性があれば、それを利用して相手を誘うこともできる。
-
-ブレイドで止めたのにジャンプや空中の突進技にサマソを出せないなら、ブレイドで止めた意味がない。
-
-ブレイドで止めて相手のジャンプやファランクスを誘ったときサマソ出てないのもったいない。
-
-ガイルは中距離で気軽に弾を撃つキャラではないが、遠距離で遅い弾を撃って、一歩前に出て、中距離から硬直に弾を当てて押すのも強い動き。
-
-時間を稼ぎたい時は弱ソニックでゆっくり時間を使う。
-
-遅い弾は追いかける。
-
-ブレイドは遠距離で使う。
-中距離のリスクの高いブレイドは減らす。
-
-ODソニックやODクロスはリターンが低いので使わない。
-
 ## 攻め
 
 バーンアウトすると守りがきついので、ゲージが少なくなったら無理に攻めない方がいい。
@@ -94,6 +30,8 @@ DR 2MKやDR HKから2MPに繋ぐ。
 めくりにも弱いので、空対空や4LKでずらしたい。
 
 あまり下がって端に追い込まれるのは強くないので、ODソニックやサマーなどからラッシュで密着して入れ替えたい。
+
+溜めがあって2LPで暴れるならソニックまで入れてしまってもいい。
 
 ## 対空
 
