--- a/games/Street-Fighter/Six/characters/Guile/ガイルの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの練習メニュー.md
@@ -1,12 +1,23 @@
 ## 飛び道具
 
-- 弱/強ソニック
+- 強ソニック, 強ソニック, ...
 
 最速で回せるようにする。
+最遠距離で着弾した瞬間に出すくらいでちょうど溜まる。感覚を覚える。
+
+## ジャンプ弱攻撃からの攻め
+
+（ダミー設定 > ガード: ランダム）
+
+- J.LK, MP, 2MP, 強サマー, SA3
+- J.LK, MP(g), ガード
+
+慣れるまではMP, 2MPでなくMP, 2MP-2MPにしてもいい。火力は落ちる。
 
 ## {C} 確反
 
 - HP(pc), 3HK, 強サマー
+- HP(pc), 4HP, 強SA1, ODサマー
 - HP(pc), HP, CR HK, 2MP, 強サマー, SA3
 
 ## {M} 確反
@@ -14,24 +25,32 @@
 - 6HP(pc), MP-4HP, 強サマー
 - 6HP(pc), MP-4HP, ODソニック, SA3
 
-## インパクトへの対応
+## {C} インパクトからのコンボ
+
+- DI(pc), 3HK, 強サマー
+- DI(pc), HP, CR HK, 2MP, SA1, ODサマー
+- DI(pc), HP, CR HK, 2MP, 強サマー, SA3
+
+## {M} インパクトからのコンボ
 
 - DI(pc), MP-4HP, 強サマー
 - DI(pc), MP-4HP, ODソニック, SA3
+
+## 壁インパクトからのコンボ
+
+- DI(壁), 2MP, 強サマー,
+
+## キャンセルラッシュからの攻め
+
+- 2MP, CR 2MP, MP, 2MP, 強サマー, SA3
+- 2MP, CR 2MP(g), 2MP-2MP(g), 強SA1, ODサマー
+- 2MP, CR 2MP(g), 2MP-2MP(g), 弱ソニック
+
+慣れるまではMP, 2MPでなくMP, 2MP-2MPにしてもいい。火力は落ちる。
+なんならMPを挟まなくてもいい。
 
 ## 対空
 
 - 弱サマー
 - 2HP
 - MK
-
-## ジャンプ弱攻撃からのコンボ
-
-（ダミー設定 > ガード: ランダム）
-
-- J.LK, MP, 2MP, 強サマー
-- J.LK(g), MP, ガード
-
-## ジャンプ攻撃からのコンボ
-
-- J.HK, 2MP, 強サマー
